--- a/android/lib/resource/src/main/res/values-da/strings.xml
+++ b/android/lib/resource/src/main/res/values-da/strings.xml
@@ -17,6 +17,7 @@
     <string name="add_method">Tilføj metode</string>
     <string name="add_time_to_account">Køb enten kredit på vores hjemmeside, eller indløs en kupon.</string>
     <string name="added_to_your_account">%1$s blev føjet til din konto.</string>
+    <string name="adding_method">Tilføjer metode...</string>
     <string name="agree_and_continue">Accepter og fortsæt</string>
     <string name="all_applications">Alle applikationer</string>
     <string name="all_locations">Alle placeringer</string>
@@ -27,12 +28,16 @@
     <string name="any">Enhver</string>
     <string name="api_access_description">Administrer og tilføj brugerdefinerede metoder for at få adgang til Mullvad API.</string>
     <string name="api_access_method_info_first_line">Appen skal kommunikere med en Mullvad API-server for at kunne logge dig på, hente serverlister og andre kritiske operationer.</string>
+    <string name="api_access_method_info_fourth_line">Den \"aktuelle\" metode er den metode, som appen bruger til at nå API\'en.</string>
     <string name="api_access_method_info_second_line">På nogle netværk, hvor der bruges forskellige typer censur, er API-serverne muligvis ikke direkte tilgængelige.</string>
     <string name="api_access_method_info_third_line">Denne funktion giver dig mulighed for at omgå denne censur ved at tilføje brugerdefinerede måder at få adgang til API\'en via proxyer og lignende metoder.</string>
     <string name="api_reachable">API tilgængelig</string>
+    <string name="api_reachable_adding_method">API tilgængelig, tilføjer metode...</string>
     <string name="api_unreachable">API utilgængelig</string>
+    <string name="api_unreachable_save_anyway">API utilgængelig, gemme metode alligevel?</string>
     <string name="app_version">App-version</string>
     <string name="apply">Anvend</string>
+    <string name="at_least_on_method_needs_to_enabled">Mindst én metode skal aktiveres</string>
     <string name="auth_failed">Kan ikke godkende konto. Indsend en problemrapport.</string>
     <string name="authentication">Godkendelse</string>
     <string name="auto_connect">Auto-tilslutning</string>
@@ -42,7 +47,11 @@
     <string name="auto_connect_carousel_first_slide_top_text">Indstillingerne for automatisk forbindelse og Lockdown-tilstand kan findes i Android- systemindstillingerne. Følg denne vejledning for at aktivere en eller begge.</string>
     <string name="auto_connect_carousel_second_slide_bottom_text">2. For at aktivere automatisk forbindelse skal du klikke på knappen ud for &lt;b&gt;Altid-til VPN&lt;/b&gt;.</string>
     <string name="auto_connect_carousel_second_slide_top_text">Auto-tilslutning kaldes Altid-til VPN i Android-systemindstillingerne, og det sørger for, at du konstant er forbundet til VPN-tunnelen og automatisk forbinder efter genstart.</string>
+    <string name="auto_connect_carousel_third_slide_bottom_text">3. For at aktivere Lockdown-tilstand skal du klikke på knappen ud for &lt;b&gt;Bloker forbindelser uden VPN&lt;/b&gt;.&lt;br /&gt;&lt;br /&gt;&lt;b&gt;Advarsel: Denne indstilling blokerer split-apps og funktionen Lokal netværksdeling. &lt;/b&gt;</string>
+    <string name="auto_connect_carousel_third_slide_top_text">Lockdown-tilstanden kaldes &lt;b&gt;Bloker forbindelser uden VPN&lt;/b&gt; i Android-systemindstillingerne. Det hjælper med at minimere lækager, men det har nogle kendte begrænsninger, som du kan læse mere om</string>
+    <string name="auto_connect_carousel_third_slide_top_text_website_link">her</string>
     <string name="auto_connect_footer_legacy">Brug systemindstillingen &lt;b&gt;Altid til&lt;/b&gt; i stedet ved at følge vejledningen i &lt;b&gt;%1$s&lt;/b&gt; ovenfor.</string>
+    <string name="auto_connect_footer_legacy_tv">Tilslut automatisk, når appen starter. Denne indstilling vil blive erstattet med en ny funktion der opretter forbindelse ved opstart af enheden i en fremtidig opdatering.</string>
     <string name="auto_connect_legacy">Automatisk forbindelse (ældre metode)</string>
     <string name="automatic">Automatisk</string>
     <string name="back">Tilbage</string>
@@ -79,6 +88,7 @@
     <string name="creating_new_account">Opretter konto...</string>
     <string name="creating_secure_connection">OPRETTER SIKKER FORBINDELSE</string>
     <string name="critical_error">Kritisk fejl (som kræver din opmærksomhed)</string>
+    <string name="current_method">Aktuel: %1$s</string>
     <string name="custom_dns_disable_mode_subtitle">Deaktiver alle &lt;b&gt;%1$s&lt;/b&gt; ovenfor for at aktivere denne indstilling.</string>
     <string name="custom_dns_footer">Aktiver for at tilføje mindst én DNS-server.</string>
     <string name="custom_dns_hint">Indtast IP</string>
@@ -94,6 +104,8 @@
     <string name="delete_custom_list_confirmation_description">Vil du slette \"%1$s\"?</string>
     <string name="delete_custom_list_message">\"%1$s\" blev slettet</string>
     <string name="delete_list">Slet liste</string>
+    <string name="delete_method">Slet metode</string>
+    <string name="delete_method_question">Vil du slette metoden?</string>
     <string name="device_inactive_description">Du har fjernet denne enhed. For at oprette forbindelse igen skal du logge ind igen.</string>
     <string name="device_inactive_title">Enheden er inaktiv</string>
     <string name="device_inactive_unblock_warning">Hvis du logger på, ophæves blokeringen af internettet på denne enhed.</string>
@@ -122,6 +134,7 @@
     <string name="edit_name">Rediger navn</string>
     <string name="enable">Aktiver</string>
     <string name="enable_custom_dns">Brug brugerdefineret DNS-server</string>
+    <string name="enable_method">Aktiver metode</string>
     <string name="enter_value_placeholder">Indtast MTU</string>
     <string name="enter_voucher_code">Indtast kuponkode</string>
     <string name="error_occurred">Der opstod en fejl.</string>
@@ -133,6 +146,8 @@
     <string name="failed_to_remove_device">Enheden kunne ikke fjernes</string>
     <string name="failed_to_send">Kunne ikke sende</string>
     <string name="failed_to_send_details">Hvis du lukker formularen og prøver igen senere, vil de oplysninger, du allerede har indtastet, stadig være her.</string>
+    <string name="failed_to_set_current_test_error">Kunne ikke indstilles til aktuel - API ikke tilgængelig</string>
+    <string name="failed_to_set_current_unknown_error">Kunne ikke indstilles til aktuel - Ukendt årsag</string>
     <string name="faqs_and_guides">Ofte stillede spørgsmål og vejledninger</string>
     <string name="filter">Filter</string>
     <string name="filtered">Filtreret:</string>
@@ -209,6 +224,7 @@
     <string name="ownership">Ejerskab</string>
     <string name="paid_until">Betalt indtil</string>
     <string name="password">Adgangskode</string>
+    <string name="password_optional">Adgangskode (valgfrit)</string>
     <string name="patch_not_matching_specification">Patch matcher ikke specifikationen</string>
     <string name="pay_to_start_using">For at begynde at bruge appen skal du først føje tid til din konto.</string>
     <string name="payment_billing_error_dialog_message">Vi kunne ikke starte betalingsprocessen. Sørg for, at du har den nyeste version af Google Play.</string>
@@ -220,6 +236,8 @@
     <string name="payment_pending_dialog_message">Vi er i øjeblikket ved at bekræfte dit køb, det kan tage noget tid. Din tid vil blive tilføjet, hvis bekræftelsen lykkes.</string>
     <string name="payment_pending_dialog_title">Bekræfter køb</string>
     <string name="payment_status_pending">Google Play-betaling afventer</string>
+    <string name="please_enter_a_valid_ip_address">Indtast en gyldig IPv4- eller IPv6-adresse</string>
+    <string name="please_enter_a_valid_remote_server_port">Indtast en gyldig fjernserverport</string>
     <string name="port">Port</string>
     <string name="privacy_disclaimer_body_first_paragraph">For at sørge for, at du har den mest sikre version og for at informere dig om eventuelle problemer med den aktuelle version, der kører, udfører appen automatisk versionstjek. Dette sender app-versionen og Android-systemversionen til Mullvad-servere. Mullvad holder tal på antallet af brugte app-versioner og Android-versioner. Dataene bliver aldrig opbevaret eller brugt på nogen måde, der kan identificere dig.</string>
     <string name="privacy_disclaimer_body_second_paragraph">Hvis funktionen split tunneling bruges, beder appen dit system om en liste over alle installerede programmer. Denne liste hentes kun i split tunnel-visningen. Listen over installerede programmer sendes aldrig fra enheden.</string>
@@ -280,7 +298,7 @@
     <string name="settings_patch_error_invalid_or_missing_value">Ugyldig eller manglende værdi \"%1$s\"</string>
     <string name="settings_patch_error_recursion_limit">Rekursionsgrænse</string>
     <string name="settings_patch_error_unable_to_parse">Kan ikke fortolke patch</string>
-    <string name="settings_patch_error_unknown_or_prohibited_key">Ukendt eller forbudt nøgle \"%1$s\"</string>
+    <string name="settings_patch_error_unknown_or_prohibited_key">Ukendt eller ikke-tilladt nøgle \"%1$s\"</string>
     <string name="settings_patch_success">Importen lykkedes, tilsidesættelser aktive</string>
     <string name="settings_preferences">Indstillinger</string>
     <string name="settings_vpn">VPN-indstillinger</string>
@@ -292,7 +310,11 @@
     <string name="submit_button">Indsend</string>
     <string name="switch_location">Skift placering</string>
     <string name="tcp">TCP</string>
+    <string name="test_method">Testmetode</string>
     <string name="testing">Tester...</string>
+    <string name="testing_name">Tester %1$s...</string>
+    <string name="this_field_is_required">Dette felt er påkrævet</string>
+    <string name="this_is_already_set_as_current">Den er allerede indstillet som aktuel</string>
     <string name="to_add_locations_to_a_list">Tryk på \" ︙ \" eller tryk langvarigt på et land, en by eller en server for at tilføje placeringer til en liste.</string>
     <string name="to_create_a_custom_list">Tryk på \" ︙ \" for at oprette en brugerdefineret liste</string>
     <string name="toggle_vpn">Slå VPN til/fra</string>
@@ -307,6 +329,7 @@
     <string name="undo">Fortryd</string>
     <string name="unsecured">Ikke sikret</string>
     <string name="unsecured_connection">IKKE-SIKRET FORBINDELSE</string>
+    <string name="unsecured_vpn_permission_error">Usikret (ingen VPN-tilladelse)</string>
     <string name="unsupported_version">IKKE-UNDERSTØTTET VERSION</string>
     <string name="unsupported_version_description">Dit privatliv kan være i fare med denne ikke-understøttede appversion. Opdater den straks.</string>
     <string name="unsupported_version_without_upgrade">Du kører en ikke-understøttet appversion.</string>
@@ -315,9 +338,11 @@
     <string name="update_available_footer">Opdatering tilgængelig, download den for at forblive sikker.</string>
     <string name="update_dns_server_dialog_title">Opdater DNS-server</string>
     <string name="update_list_name">Opdater listenavn</string>
+    <string name="use_method">Brug metode</string>
     <string name="user_email_hint">Din e-mail (valgfrit)</string>
     <string name="user_message_hint">For at vi bedre kan hjælpe dig, bedes du skrive på engelsk eller svensk og nævne hvilket land, du befinder dig i.</string>
     <string name="username">Brugernavn</string>
+    <string name="verifying_api_method">Bekræfter API-metode...</string>
     <string name="verifying_voucher">Bekræfter kupon…</string>
     <string name="view_logs">Se app-logfiler</string>
     <string name="virtual_adapter_problem">Fejl ved virtuel adapter</string>
