--- a/android/lib/resource/src/main/res/values-de/strings.xml
+++ b/android/lib/resource/src/main/res/values-de/strings.xml
@@ -17,6 +17,7 @@
     <string name="add_method">Methode hinzufügen</string>
     <string name="add_time_to_account">Kaufen Sie entweder Guthaben über unsere Seite oder lösen Sie einen Gutschein ein.</string>
     <string name="added_to_your_account">%1$s wurde zu Ihrem Konto hinzugefügt.</string>
+    <string name="adding_method">Methode hinzufügen …</string>
     <string name="agree_and_continue">Akzeptieren und weiter</string>
     <string name="all_applications">Alle Anwendungen</string>
     <string name="all_locations">Alle Standorte</string>
@@ -27,12 +28,16 @@
     <string name="any">Beliebige</string>
     <string name="api_access_description">Verwaltung und Hinzufügen benutzerdefinierter Methoden für den Zugriff auf die Mullvad-API.</string>
     <string name="api_access_method_info_first_line">Die App muss mit einem Mullvad API-Server kommunizieren, um Sie anzumelden, Serverlisten abzurufen und andere wichtige Vorgänge durchzuführen.</string>
+    <string name="api_access_method_info_fourth_line">Die „aktuelle“ Methode gibt an, welche Methode die App verwendet, um die API zu erreichen.</string>
     <string name="api_access_method_info_second_line">In einigen Netzwerken, in denen verschiedene Arten der Zensur eingesetzt werden, sind die API-Server möglicherweise nicht direkt erreichbar.</string>
     <string name="api_access_method_info_third_line">Mit dieser Funktion können Sie diese Zensur umgehen, indem Sie benutzerdefinierte Wege zum Zugriff auf die API über Proxys und ähnliche Methoden hinzufügen.</string>
     <string name="api_reachable">API erreichbar</string>
+    <string name="api_reachable_adding_method">API erreichbar, Methode hinzufügen …</string>
     <string name="api_unreachable">API nicht erreichbar</string>
+    <string name="api_unreachable_save_anyway">API nicht erreichbar, Methode dennoch speichern?</string>
     <string name="app_version">App-Version</string>
     <string name="apply">Anwenden</string>
+    <string name="at_least_on_method_needs_to_enabled">Mindestens eine Methode muss aktiviert sein</string>
     <string name="auth_failed">Konto konnte nicht authentifiziert werden. Bitte senden Sie einen Problembericht.</string>
     <string name="authentication">Authentifizierung</string>
     <string name="auto_connect">Automatische Verbindung</string>
@@ -42,7 +47,11 @@
     <string name="auto_connect_carousel_first_slide_top_text">Die Einstellungen für die automatische Verbindung und den Sperrmodus finden Sie in den Android-Systemeinstellungen. Folgen Sie dieser Anleitung, um eine oder beide Einstellungen zu aktivieren.</string>
     <string name="auto_connect_carousel_second_slide_bottom_text">2. Um die automatische Verbindung zu aktivieren, klicken Sie auf den Kippschalter neben &lt;b&gt;Always-on VPN&lt;/b&gt;.</string>
     <string name="auto_connect_carousel_second_slide_top_text">Die automatische Verbindung wird in den Android-Systemeinstellungen als „Always-on VPN“ bezeichnet und sorgt dafür, dass Sie ständig mit dem VPN-Tunnel verbunden sind und sich nach einem Neustart automatisch verbinden.</string>
+    <string name="auto_connect_carousel_third_slide_bottom_text">3. Um den Sperrmodus zu aktivieren, klicken Sie auf den Kippschalter neben &lt;b&gt;Verbindungen ohne VPN blockieren&lt;/b&gt;.&lt;br /&gt;&lt;br /&gt;&lt;b&gt;Warnung: Diese Einstellung blockiert geteilte Apps und die Funktion der lokalen Netzwerkfreigabe.&lt;/b&gt;</string>
+    <string name="auto_connect_carousel_third_slide_top_text">Der Sperrmodus heißt in den Android-Systemeinstellungen &lt;b&gt;Verbindungen ohne VPN blockieren&lt;/b&gt;. Dieser trägt dazu bei, Lecks zu minimieren, hat jedoch einige bekannte Einschränkungen. Mehr dazu finden Sie</string>
+    <string name="auto_connect_carousel_third_slide_top_text_website_link">hier</string>
     <string name="auto_connect_footer_legacy">Bitte verwenden Sie stattdessen die Systemeinstellung &lt;b&gt;Always-on (Durchgehend aktiv)&lt;/b&gt;, indem Sie die Anleitung oben unter &lt;b&gt;%1$s&lt;/b&gt; befolgen.</string>
+    <string name="auto_connect_footer_legacy_tv">Automatisch verbinden, wenn die App gestartet wird. Diese Einstellung wird in einem zukünftigen Update durch eine neue Funktion zum Verbinden beim Gerätestart ersetzt.</string>
     <string name="auto_connect_legacy">Automatische Verbindung (veraltet)</string>
     <string name="automatic">Automatisch</string>
     <string name="back">Zurück</string>
@@ -79,6 +88,7 @@
     <string name="creating_new_account">Konto wird erstellt ...</string>
     <string name="creating_secure_connection">SICHERE VERBINDUNG WIRD ERSTELLT</string>
     <string name="critical_error">Kritischer Fehler (Ihre Aufmerksamkeit ist erforderlich)</string>
+    <string name="current_method">Aktuell: %1$s</string>
     <string name="custom_dns_disable_mode_subtitle">Deaktivieren Sie oben alle &lt;b&gt;%1$s&lt;/b&gt;, um diese Einstellung zu aktivieren.</string>
     <string name="custom_dns_footer">Aktivieren, um mindestens einen DNS-Server hinzuzufügen.</string>
     <string name="custom_dns_hint">IP eingeben</string>
@@ -94,6 +104,8 @@
     <string name="delete_custom_list_confirmation_description">„%1$s“ löschen?</string>
     <string name="delete_custom_list_message">„%1$s“ wurde gelöscht</string>
     <string name="delete_list">Liste löschen</string>
+    <string name="delete_method">Methode löschen</string>
+    <string name="delete_method_question">Methode löschen?</string>
     <string name="device_inactive_description">Sie haben dieses Gerät entfernt. Um sich erneut zu verbinden, müssen Sie sich erneut anmelden.</string>
     <string name="device_inactive_title">Gerät ist inaktiv</string>
     <string name="device_inactive_unblock_warning">Wenn Sie mit der Anmeldung fortfahren, wird die Internetsperre auf diesem Gerät aufgehoben.</string>
@@ -122,6 +134,7 @@
     <string name="edit_name">Name bearbeiten</string>
     <string name="enable">Aktivieren</string>
     <string name="enable_custom_dns">Benutzerdefinierten DNS-Server verwenden</string>
+    <string name="enable_method">Methode aktivieren</string>
     <string name="enter_value_placeholder">MTU eingeben</string>
     <string name="enter_voucher_code">Gutscheincode eingeben</string>
     <string name="error_occurred">Ein Fehler ist aufgetreten.</string>
@@ -133,6 +146,8 @@
     <string name="failed_to_remove_device">Fehler beim Entfernen des Geräts</string>
     <string name="failed_to_send">Fehler beim Senden</string>
     <string name="failed_to_send_details">Die Informationen, die Sie bereits eingegeben haben, werden immer noch da sein, wenn Sie das Formular schließen und es später erneut versuchen.</string>
+    <string name="failed_to_set_current_test_error">Konnte nicht als aktuelle gesetzt werden – API nicht erreichbar</string>
+    <string name="failed_to_set_current_unknown_error">Konnte nicht als aktuelle gesetzt werden – Unbekannter Grund</string>
     <string name="faqs_and_guides">Häufig gestellte Fragen &amp; Anleitungen</string>
     <string name="filter">Filter</string>
     <string name="filtered">Gefiltert:</string>
@@ -209,6 +224,7 @@
     <string name="ownership">Eigentümerschaft</string>
     <string name="paid_until">Bezahlt bis</string>
     <string name="password">Passwort</string>
+    <string name="password_optional">Passwort (optional)</string>
     <string name="patch_not_matching_specification">Patch entspricht nicht der Spezifikation</string>
     <string name="pay_to_start_using">Um mit der Nutzung dieser App zu beginnen, müssen Sie erst einmal Zeit zu Ihrem Konto hinzufügen.</string>
     <string name="payment_billing_error_dialog_message">Wir konnten den Zahlungsvorgang nicht starten. Bitte vergewissern Sie sich, dass Sie die neueste Version von Google Play haben.</string>
@@ -220,6 +236,8 @@
     <string name="payment_pending_dialog_message">Wir verifizieren gerade Ihren Kauf, dies kann einige Zeit dauern. Ihre Zeit wird hinzugefügt, wenn die Verifizierung erfolgreich ist.</string>
     <string name="payment_pending_dialog_title">Kauf verifizieren</string>
     <string name="payment_status_pending">Google-Play-Zahlung ausstehend</string>
+    <string name="please_enter_a_valid_ip_address">Bitte geben Sie eine gültige IPv4- oder IPv6-Adresse ein</string>
+    <string name="please_enter_a_valid_remote_server_port">Bitte geben Sie einen gültigen Remote-Server-Port ein</string>
     <string name="port">Port</string>
     <string name="privacy_disclaimer_body_first_paragraph">Um zu gewährleisten, dass Sie die sicherste Version haben und um Sie über eventuelle Probleme mit der aktuellen Version zu informieren, führt die App automatisch Versionsprüfungen durch. Dabei werden die App-Version und die Android-Systemversion an die Mullvad-Server gesendet. Mullvad führt Zähler für die Anzahl der verwendeten App-Versionen und Android-Versionen. Die Daten werden niemals gespeichert oder in einer Weise verwendet, die Sie identifizieren könnte.</string>
     <string name="privacy_disclaimer_body_second_paragraph">Wenn Split Tunneling verwendet wird, fragt die App Ihr System nach einer Liste aller installierten Anwendungen ab. Diese Liste wird nur in der Split-Tunneling-Ansicht abgerufen. Die Liste der installierten Anwendungen wird nie vom Gerät gesendet.</string>
@@ -292,7 +310,11 @@
     <string name="submit_button">Absenden</string>
     <string name="switch_location">Ort wechseln</string>
     <string name="tcp">TCP</string>
+    <string name="test_method">Methode testen</string>
     <string name="testing">Testen …</string>
+    <string name="testing_name">%1$s testen …</string>
+    <string name="this_field_is_required">Dieses Feld ist erforderlich</string>
+    <string name="this_is_already_set_as_current">Diese ist bereits die aktuelle</string>
     <string name="to_add_locations_to_a_list">Um Standorte zu einer Liste hinzuzufügen, drücken Sie auf „︙“ oder drücken Sie lange auf ein Land, eine Stadt oder einen Server.</string>
     <string name="to_create_a_custom_list">Um eine eigene Liste zu erstellen, drücken Sie auf „︙“</string>
     <string name="toggle_vpn">VPN umschalten</string>
@@ -307,6 +329,7 @@
     <string name="undo">Rückgängig</string>
     <string name="unsecured">Ungesichert</string>
     <string name="unsecured_connection">UNGESICHERTE VERBINDUNG</string>
+    <string name="unsecured_vpn_permission_error">Ungesichert (keine VPN-Berechtigung)</string>
     <string name="unsupported_version">NICHT UNTERSTÜTZTE VERSION</string>
     <string name="unsupported_version_description">Ihre Privatsphäre könnte mit dieser nicht unterstützen Version der App gefährdet sein. Bitte aktualisieren Sie sie.</string>
     <string name="unsupported_version_without_upgrade">Sie verwenden eine nicht unterstützte Version der App. </string>
@@ -315,9 +338,11 @@
     <string name="update_available_footer">Update verfügbar, laden Sie es herunter, um sicher zu bleiben.</string>
     <string name="update_dns_server_dialog_title">DNS-Server aktualisieren</string>
     <string name="update_list_name">Name der Liste ändern</string>
+    <string name="use_method">Methode verwenden</string>
     <string name="user_email_hint">Ihre E-Mail-Adresse (optional)</string>
     <string name="user_message_hint">Um Ihnen besser weiterhelfen zu können, schreiben Sie uns bitte auf Englisch oder Schwedisch und geben Sie an, aus welchem Land Sie die Verbindung herstellen.</string>
     <string name="username">Benutzername</string>
+    <string name="verifying_api_method">API-Methode verifizieren …</string>
     <string name="verifying_voucher">Gutschein verifizieren …</string>
     <string name="view_logs">App-Protokolle anzeigen</string>
     <string name="virtual_adapter_problem">Virtueller Adapterfehler</string>
