--- a/android/lib/resource/src/main/res/values-fi/strings.xml
+++ b/android/lib/resource/src/main/res/values-fi/strings.xml
@@ -16,7 +16,8 @@
     <string name="add_locations">Lisää sijainteja</string>
     <string name="add_method">Lisää menetelmä</string>
     <string name="add_time_to_account">Osta käyttöaikaa verkkosivustoltamme tai lunasta kuponki.</string>
-    <string name="added_to_your_account">Tilillesi lisättiin %1$s käyttöaikaa.</string>
+    <string name="added_to_your_account">%1$s lisättiin tilillesi.</string>
+    <string name="adding_method">Lisätään menetelmää...</string>
     <string name="agree_and_continue">Hyväksy ja jatka</string>
     <string name="all_applications">Kaikki sovellukset</string>
     <string name="all_locations">Kaikki sijainnit</string>
@@ -27,12 +28,16 @@
     <string name="any">Mikä tahansa</string>
     <string name="api_access_description">Hallitse ja lisää mukautettuja menetelmiä Mullvadin ohjelmointirajapinnan käyttämiseksi.</string>
     <string name="api_access_method_info_first_line">Sovelluksen on kommunikoitava Mullvadin ohjelmointirajapinnan palvelimen kanssa, jotta sinut voidaan kirjata sisään, palvelinluetteloiden hakemiseksi sekä muiden tärkeiden toimintojen suorittamiseksi.</string>
+    <string name="api_access_method_info_fourth_line">\"Nykyinen\" menetelmä edustaa sitä, mitä menetelmää sovellus käyttää APIn tavoittamiseen.</string>
     <string name="api_access_method_info_second_line">Ohjelmointirajapinnan palvelimet eivät välttämättä ole suoraan tavoitettavissa joissakin useita erityyppisiä sensurointimenetelmiä käyttävissä verkoissa.</string>
     <string name="api_access_method_info_third_line">Tämän ominaisuuden avulla voit kiertää sensuurin lisäämällä välityspalvelinten ja vastaavien menetelmien kautta toimivia, mukautettuja ohjelmointirajapinnan käyttötapoja.</string>
     <string name="api_reachable">Ohjelmointirajapinta saavutettavissa</string>
+    <string name="api_reachable_adding_method">API tavoitettavissa, menetelmää lisätään...</string>
     <string name="api_unreachable">Ohjelmointirajapinta ei ole saavutettavissa</string>
+    <string name="api_unreachable_save_anyway">API ei ole tavoitettavissa. Tallennetaanko menetelmä silti?</string>
     <string name="app_version">Sovelluksen versio</string>
     <string name="apply">Ota käyttöön</string>
+    <string name="at_least_on_method_needs_to_enabled">Vähintään yhden menetelmän on oltava käytössä</string>
     <string name="auth_failed">Tilin todentaminen ei onnistu. Lähetä ongelmaraportti.</string>
     <string name="authentication">Todennus</string>
     <string name="auto_connect">Automaattinen yhteys</string>
@@ -42,7 +47,11 @@
     <string name="auto_connect_carousel_first_slide_top_text">Automaattisen yhdistämisen ja lukitustilan asetukset löytyvät Androidin järjestelmäasetuksista. Voit ottaa jommankumman tai molemmat käyttöön tämän oppaan ohjeilla.</string>
     <string name="auto_connect_carousel_second_slide_bottom_text">2. Ota automaattinen yhteyden muodostus käyttöön napsauttamalla &lt;b&gt;Aina päällä oleva VPN&lt;/b&gt; -kohdan vieressä olevaa valintapainiketta.</string>
     <string name="auto_connect_carousel_second_slide_top_text">Automaattista yhdistämistä kutsutaan aina päällä olevaksi VPN-yhteydeksi Androidin järjestelmäasetuksissa. Se varmistaa, että olet jatkuvasti yhteydessä VPN-tunneliin, sekä muodostaa yhteyden automaattisesti aina uudelleenkäynnistyksen jälkeen.</string>
+    <string name="auto_connect_carousel_third_slide_bottom_text">3. Ota lukitustila käyttöön napsauttamalla kohdan &lt;b&gt;Estä yhteydet ilman VPN:ää&lt;/b&gt; vieressä olevaa kytkintä.&lt;br /&gt;&lt;br /&gt;&lt;b&gt;Varoitus: Tämä asetus estää jaetut sovellukset ja paikallisen verkon jakamisominaisuuden.&lt;/b&gt;</string>
+    <string name="auto_connect_carousel_third_slide_top_text">Lukitustilaa kutsutaan Android-järjestelmäasetuksissa nimellä &lt;b&gt;Estä yhteydet ilman VPN:ää&lt;/b&gt;. Se auttaa minimoimaan vuodot, mutta sillä on joitain tunnettuja rajoituksia, joista voit lukea lisää</string>
+    <string name="auto_connect_carousel_third_slide_top_text_website_link">tästä</string>
     <string name="auto_connect_footer_legacy">Käytä &lt;b&gt;aina käytössä&lt;/b&gt; -järjestelmäasetusta seuraamalla ylhäältä löytyvää opasta aiheesta &lt;b&gt;%1$s&lt;/b&gt;.</string>
+    <string name="auto_connect_footer_legacy_tv">Yhdistä automaattisesti, kun sovellus käynnistyy. Tämä asetus korvataan tulevassa päivityksessä uusi yhteys laitteen käynnistyessä -ominaisuudella.</string>
     <string name="auto_connect_legacy">Autom. yhdistäminen (vanha järjestelmä)</string>
     <string name="automatic">Automaattinen</string>
     <string name="back">Takaisin</string>
@@ -79,6 +88,7 @@
     <string name="creating_new_account">Luodaan tiliä...</string>
     <string name="creating_secure_connection">LUODAAN SUOJATTU YHTEYS</string>
     <string name="critical_error">Vakava virhe (vaatii huomiotasi)</string>
+    <string name="current_method">Nykyinen: %1$s</string>
     <string name="custom_dns_disable_mode_subtitle">Ota tämä asetus käyttöön poistamalla kaikki &lt;b&gt;%1$s&lt;/b&gt; käytöstä yllä.</string>
     <string name="custom_dns_footer">Ota käyttöön lisätäksesi vähintään yhden DNS-palvelimen.</string>
     <string name="custom_dns_hint">Anna IP-osoite</string>
@@ -94,6 +104,8 @@
     <string name="delete_custom_list_confirmation_description">Poistetaanko \"%1$s\"?</string>
     <string name="delete_custom_list_message">\"%1$s\" poistettiin</string>
     <string name="delete_list">Poista luettelo</string>
+    <string name="delete_method">Poista menetelmä</string>
+    <string name="delete_method_question">Poista menetelmä?</string>
     <string name="device_inactive_description">Olet poistanut tämän laitteen. Jos haluat muodostaa yhteyden uudelleen, sinun täytyy kirjautua takaisin sisään.</string>
     <string name="device_inactive_title">Laite ei ole aktiivinen</string>
     <string name="device_inactive_unblock_warning">Kirjautumiseen siirtyminen purkaa internetin käytön eston tältä laitteelta.</string>
@@ -122,6 +134,7 @@
     <string name="edit_name">Muokkaa nimeä</string>
     <string name="enable">Ota käyttöön</string>
     <string name="enable_custom_dns">Käytä mukautettua DNS-palvelinta</string>
+    <string name="enable_method">Ota menetelmä käyttöön</string>
     <string name="enter_value_placeholder">Syötä MTU</string>
     <string name="enter_voucher_code">Syötä kuponkikoodi</string>
     <string name="error_occurred">Ilmeni virhe.</string>
@@ -133,6 +146,8 @@
     <string name="failed_to_remove_device">Laitteen poistaminen epäonnistui</string>
     <string name="failed_to_send">Lähetys epäonnistui</string>
     <string name="failed_to_send_details">Jos poistut lomakkeelta ja yrität myöhemmin uudelleen, jo syöttämäsi tiedot säilyvät lomakkeella.</string>
+    <string name="failed_to_set_current_test_error">Nykyisen asetus epäonnistui – APIa ei tavoiteta</string>
+    <string name="failed_to_set_current_unknown_error">Nykyisen asetus epäonnistui – Tuntematon syy</string>
     <string name="faqs_and_guides">Usein kysytyt kysymykset ja oppaat</string>
     <string name="filter">Suodatin</string>
     <string name="filtered">Suodatettu:</string>
@@ -163,7 +178,7 @@
     <string name="local_network_sharing_additional_info">Ominaisuus siis sallii verkkoviestinnän tunnelin ulkopuolella paikallisille lähetys- ja monilähetysalueille sekä näillä yksityisillä IP-alueilla kumpaankin suuntaan:</string>
     <string name="local_network_sharing_info">Tämä ominaisuus mahdollistaa pääsyn muihin paikallisverkon laitteisiin esimerkiksi jakamisen, tulostamisen, suoratoiston jne. tarpeisiin.</string>
     <string name="location_added">%1$s (lisätty)</string>
-    <string name="location_was_added_to_list">%1$s lisättiin luetteloon \"%2$s\"</string>
+    <string name="location_was_added_to_list">%1$s lisättiin luetteloon\"%2$s\"</string>
     <string name="locations">Sijainnit</string>
     <string name="locations_were_changed_for">Kohteen \"%1$s\" sijainteja vaihdettiin</string>
     <string name="log_out">Kirjaudu ulos</string>
@@ -209,6 +224,7 @@
     <string name="ownership">Omistajuus</string>
     <string name="paid_until">Maksu ennen</string>
     <string name="password">Salasana</string>
+    <string name="password_optional">Salasana (valinnainen)</string>
     <string name="patch_not_matching_specification">Muutostiedosto ei vastaa määritelmää</string>
     <string name="pay_to_start_using">Voit aloittaa sovelluksen käyttämisen lisäämällä ensin aikaa tilillesi.</string>
     <string name="payment_billing_error_dialog_message">Emme pystyneet aloittamaan maksun käsittelyä. Varmista, että käytät Google Playn uusinta versiota.</string>
@@ -220,6 +236,8 @@
     <string name="payment_pending_dialog_message">Vahvistamme ostostasi parhaillaan. Siinä saattaa vierähtää jonkin aikaa. Tilillesi lisätään käyttöaikaa, kunhan ostoksen vahvistus onnistuu.</string>
     <string name="payment_pending_dialog_title">Ostoksen vahvistaminen</string>
     <string name="payment_status_pending">Google Play -maksu odottaa</string>
+    <string name="please_enter_a_valid_ip_address">Anna kelvollinen IPv4- tai IPv6-osoite</string>
+    <string name="please_enter_a_valid_remote_server_port">Anna kelvollinen etäpalvelimen portti</string>
     <string name="port">Portti</string>
     <string name="privacy_disclaimer_body_first_paragraph">Sovellus suorittaa versiotarkistuksia automaattisesti varmistaakseen, että käytät kaikkein turvallisinta versiota, ja ilmoittaakseen sinulle kaikista parhaillaan käynnissä olevan version ongelmista. Se lähettää Mullvadin palvelimille tiedot sovellusversiosta ja Android-järjestelmäversiosta. Mullvad pitää lukua käytettyjen sovellusversioiden ja Android-versioiden määristä. Tietoja ei koskaan tallenneta tai käytetä tavalla, joka voisi mahdollistaa tunnistamisesi.</string>
     <string name="privacy_disclaimer_body_second_paragraph">Jos käytetään sovelluskohtaista yhdistämistä, sovellus pyytää järjestelmältäsi luettelon kaikista siihen asennetuista sovelluksista. Luettelo noudetaan vain sovelluskohtaisen yhdistämisen näkymässä. Asennettujen sovellusten luetteloa ei koskaan lähetetä laitteelta.</string>
@@ -292,7 +310,11 @@
     <string name="submit_button">Lähetä</string>
     <string name="switch_location">Vaihda sijaintia</string>
     <string name="tcp">TCP</string>
+    <string name="test_method">Testaa menetelmä</string>
     <string name="testing">Testataan...</string>
+    <string name="testing_name">Testataan menetelmää %1$s...</string>
+    <string name="this_field_is_required">Tämä kenttä on pakollinen</string>
+    <string name="this_is_already_set_as_current">Tämä on jo asetettu nykyiseksi</string>
     <string name="to_add_locations_to_a_list">Jos haluat lisätä luetteloon sijainteja, paina \"︙\" tai paina pitkään maata, kaupunkia tai palvelinta.</string>
     <string name="to_create_a_custom_list">Voit luoda mukautetun luettelon painamalla \"︙\"</string>
     <string name="toggle_vpn">Vaihda VPN:ää</string>
@@ -307,6 +329,7 @@
     <string name="undo">Kumoa</string>
     <string name="unsecured">Suojaamaton</string>
     <string name="unsecured_connection">SUOJAAMATON YHTEYS</string>
+    <string name="unsecured_vpn_permission_error">Suojaamaton (ei VPN-käyttöoikeutta)</string>
     <string name="unsupported_version">EI-TUETTU VERSIO</string>
     <string name="unsupported_version_description">Yksityisyytesi saattaa olla vaarassa tämän sovellusversion, jota ei tueta, vuoksi. Päivitä versio heti.</string>
     <string name="unsupported_version_without_upgrade">Sovellusversiotasi ei tueta.</string>
@@ -315,9 +338,11 @@
     <string name="update_available_footer">Päivitys saatavilla. Lataa se pysyäksesi suojattuna.</string>
     <string name="update_dns_server_dialog_title">Päivitä DNS-palvelin</string>
     <string name="update_list_name">Päivitä luettelon nimi</string>
+    <string name="use_method">Käytä menetelmä</string>
     <string name="user_email_hint">Sähköpostisi (valinnainen)</string>
     <string name="user_message_hint">Jotta voisimme avustaa sinua paremmin, kirjoita englanniksi tai ruotsiksi ja mainitse, mistä maasta muodostat yhteyden.</string>
     <string name="username">Käyttäjätunnus</string>
+    <string name="verifying_api_method">Vahvistetaan API-menetelmää...</string>
     <string name="verifying_voucher">Kuponkia vahvistetaan…</string>
     <string name="view_logs">Tarkastele sovelluslokeja</string>
     <string name="virtual_adapter_problem">Virtuaalisovittimen virhe</string>
