--- a/android/lib/resource/src/main/res/values-it/strings.xml
+++ b/android/lib/resource/src/main/res/values-it/strings.xml
@@ -17,6 +17,7 @@
     <string name="add_method">Aggiungi metodo</string>
     <string name="add_time_to_account">Acquista credito sul nostro sito web o riscatta un voucher.</string>
     <string name="added_to_your_account">%1$s aggiunto al tuo account.</string>
+    <string name="adding_method">Aggiunta metodo...</string>
     <string name="agree_and_continue">Accetta e continua</string>
     <string name="all_applications">Tutte le applicazioni</string>
     <string name="all_locations">Tutti i luoghi</string>
@@ -27,12 +28,16 @@
     <string name="any">Qualsiasi</string>
     <string name="api_access_description">Gestisci e aggiungi metodi personalizzati per accedere all\'API Mullvad.</string>
     <string name="api_access_method_info_first_line">L\'app deve comunicare con un server API Mullvad per accedere, recuperare elenchi di server e altre operazioni critiche.</string>
+    <string name="api_access_method_info_fourth_line">Il metodo \"Attuale\" rappresenta il metodo utilizzato dall\'app per raggiungere l\'API.</string>
     <string name="api_access_method_info_second_line">Su alcune reti, dove vengono utilizzati vari tipi di censura, i server API potrebbero non essere direttamente raggiungibili.</string>
     <string name="api_access_method_info_third_line">Questa funzionalità ti consente di aggirare tale censura aggiungendo modi personalizzati per accedere all\'API tramite proxy e metodi simili.</string>
     <string name="api_reachable">API raggiungibile</string>
+    <string name="api_reachable_adding_method">API raggiungibile, aggiunta del metodo...</string>
     <string name="api_unreachable">API non raggiungibile</string>
+    <string name="api_unreachable_save_anyway">API non raggiungibile, salvare comunque il metodo?</string>
     <string name="app_version">Versione app</string>
     <string name="apply">Applica</string>
+    <string name="at_least_on_method_needs_to_enabled">È necessario abilitare almeno un metodo</string>
     <string name="auth_failed">Impossibile autenticare l\'account. Invia una segnalazione del problema.</string>
     <string name="authentication">Autenticazione</string>
     <string name="auto_connect">Connessione automatica</string>
@@ -42,7 +47,11 @@
     <string name="auto_connect_carousel_first_slide_top_text">Le impostazioni della modalità di Connessione automatica e di Blocco si trovano nelle impostazioni del sistema Android. Segui questa guida per abilitare una o entrambe.</string>
     <string name="auto_connect_carousel_second_slide_bottom_text">2. Per abilitare la connessione automatica, clicca sull\'interruttore accanto a &lt;b&gt;VPN sempre attiva&lt;/b&gt;.</string>
     <string name="auto_connect_carousel_second_slide_top_text">La connessione automatica è denominata VPN sempre attiva nelle impostazioni del sistema Android e garantisce di essere costantemente connessi al tunnel VPN e di connettersi automaticamente dopo il riavvio.</string>
+    <string name="auto_connect_carousel_third_slide_bottom_text">3. Per abilitare la Modalità Blocco, fai clic sull\'interruttore accanto a &lt;b&gt;Blocca connessioni senza VPN&lt;/b&gt;.&lt;br /&gt;&lt;br /&gt;&lt;b&gt;Avviso: questa impostazione blocca le app divise e la funzione di condivisione della rete locale.&lt;/b&gt;</string>
+    <string name="auto_connect_carousel_third_slide_top_text">La Modalità Blocco si chiama &lt;b&gt;Blocca connessioni senza VPN&lt;/b&gt; nelle impostazioni del sistema Android. Aiuta a ridurre al minimo le perdite, tuttavia presenta alcune limitazioni su cui consigliamo di approfondire</string>
+    <string name="auto_connect_carousel_third_slide_top_text_website_link">qui</string>
     <string name="auto_connect_footer_legacy">Utilizza piuttosto l\'impostazione di sistema &lt;b&gt;Sempre attivo&lt;/b&gt; seguendo la guida in &lt;b&gt;%1$s&lt;/b&gt; sopra.</string>
+    <string name="auto_connect_footer_legacy_tv">Connettiti automaticamente all\'avvio dell\'app. Questa impostazione verrà sostituita con una nuova funzionalità di connessione all\'avvio del dispositivo in un aggiornamento futuro.</string>
     <string name="auto_connect_legacy">Connessione automatica (precedente)</string>
     <string name="automatic">Automatico</string>
     <string name="back">Indietro</string>
@@ -79,6 +88,7 @@
     <string name="creating_new_account">Creazione account...</string>
     <string name="creating_secure_connection">CREAZIONE CONNESSIONE PROTETTA</string>
     <string name="critical_error">Errore critico (è necessario intervenire)</string>
+    <string name="current_method">Attuale: %1$s</string>
     <string name="custom_dns_disable_mode_subtitle">Disabilita tutti i &lt;b&gt;%1$s&lt;/b&gt; sopra per attivare questa impostazione.</string>
     <string name="custom_dns_footer">Abilita per aggiungere almeno un server DNS.</string>
     <string name="custom_dns_hint">Inserisci IP</string>
@@ -94,6 +104,8 @@
     <string name="delete_custom_list_confirmation_description">Eliminare \"%1$s\"?</string>
     <string name="delete_custom_list_message">\"%1$s\" eliminato</string>
     <string name="delete_list">Elimina elenco</string>
+    <string name="delete_method">Elimina metodo</string>
+    <string name="delete_method_question">Eliminare il metodo?</string>
     <string name="device_inactive_description">Hai rimosso questo dispositivo. Per riconnetterti, dovrai effettuare nuovamente il login.</string>
     <string name="device_inactive_title">Il dispositivo è inattivo</string>
     <string name="device_inactive_unblock_warning">Andare al login sbloccherà Internet su questo dispositivo.</string>
@@ -122,6 +134,7 @@
     <string name="edit_name">Modifica nome</string>
     <string name="enable">Abilita</string>
     <string name="enable_custom_dns">Usa un server DNS personalizzato</string>
+    <string name="enable_method">Abilita metodo</string>
     <string name="enter_value_placeholder">Inserisci MTU</string>
     <string name="enter_voucher_code">Inserisci codice voucher</string>
     <string name="error_occurred">Si è verificato un errore.</string>
@@ -133,6 +146,8 @@
     <string name="failed_to_remove_device">Impossibile rimuovere il dispositivo</string>
     <string name="failed_to_send">Impossibile inviare</string>
     <string name="failed_to_send_details">Se esci dal modulo e riprovi più tardi, le informazioni già inserite saranno ancora qui.</string>
+    <string name="failed_to_set_current_test_error">Impossibile impostare il valore attuale: API non raggiungibile</string>
+    <string name="failed_to_set_current_unknown_error">Impossibile impostare il valore attuale: motivo sconosciuto</string>
     <string name="faqs_and_guides">FAQ e guide</string>
     <string name="filter">Filtra</string>
     <string name="filtered">Filtrato:</string>
@@ -209,6 +224,7 @@
     <string name="ownership">Proprietà</string>
     <string name="paid_until">Pagato fino al</string>
     <string name="password">Password</string>
+    <string name="password_optional">Password (opzionale)</string>
     <string name="patch_not_matching_specification">La patch non corrisponde alle specifiche</string>
     <string name="pay_to_start_using">Per iniziare a utilizzare l\'app, devi prima aggiungere tempo al tuo account.</string>
     <string name="payment_billing_error_dialog_message">Non siamo riusciti ad avviare il processo di pagamento, assicurati di avere la versione più recente di Google Play.</string>
@@ -220,6 +236,8 @@
     <string name="payment_pending_dialog_message">Stiamo verificando il tuo acquisto, l\'operazione potrebbe richiedere del tempo. Il tuo tempo verrà aggiunto quando la verifica avrà avuto esito positivo.</string>
     <string name="payment_pending_dialog_title">Verifica dell\'acquisto</string>
     <string name="payment_status_pending">Pagamento Google Play in sospeso</string>
+    <string name="please_enter_a_valid_ip_address">Inserisci un indirizzo IPv4 o IPv6 valido</string>
+    <string name="please_enter_a_valid_remote_server_port">Inserisci una porta di server remoto valida</string>
     <string name="port">Porta</string>
     <string name="privacy_disclaimer_body_first_paragraph">Per assicurarti di avere la versione più sicura e per informarti di eventuali problemi con la versione attualmente in esecuzione, l\'app esegue automaticamente i controlli di versione. Questa operazione invia la versione dell\'app e la versione del sistema Android ai server Mullvad. Mullvad mantiene traccia dei numeri di versione dell\'app utilizzati e delle versioni di Android. I dati non vengono mai archiviati o utilizzati in alcun modo che possa identificarti.</string>
     <string name="privacy_disclaimer_body_second_paragraph">Se viene utilizzata la funzionalità di split tunneling, l\'app richiede al tuo sistema un elenco di tutte le applicazioni installate. Questo elenco viene recuperato solo nella vista split tunneling. L\'elenco delle applicazioni installate non viene mai inviato dal dispositivo.</string>
@@ -292,7 +310,11 @@
     <string name="submit_button">Invia</string>
     <string name="switch_location">Cambia posizione</string>
     <string name="tcp">TCP</string>
+    <string name="test_method">Test del metodo</string>
     <string name="testing">Test...</string>
+    <string name="testing_name">Test di %1$s...</string>
+    <string name="this_field_is_required">Questo campo è obbligatorio</string>
+    <string name="this_is_already_set_as_current">È già impostato come attuale</string>
     <string name="to_add_locations_to_a_list">Per aggiungere posizioni a un elenco, premi \"︙\" o tieni premuto su un Paese, una città o un server.</string>
     <string name="to_create_a_custom_list">Per creare un elenco personalizzato, premi \"︙\"</string>
     <string name="toggle_vpn">Attiva/disattiva VPN</string>
@@ -307,6 +329,7 @@
     <string name="undo">Annulla</string>
     <string name="unsecured">Non protetto</string>
     <string name="unsecured_connection">CONNESSIONE NON PROTETTA</string>
+    <string name="unsecured_vpn_permission_error">Non protetto (nessuna autorizzazione VPN)</string>
     <string name="unsupported_version">VERSIONE NON SUPPORTATA</string>
     <string name="unsupported_version_description">La tua privacy potrebbe essere a rischio con questa versione dell\'app non supportata. Aggiornala subito.</string>
     <string name="unsupported_version_without_upgrade">Stai eseguendo una versione dell\'app non supportata.</string>
@@ -315,9 +338,11 @@
     <string name="update_available_footer">Aggiornamento disponibile; esegui il download per rimanere protetto.</string>
     <string name="update_dns_server_dialog_title">Aggiorna server DNS</string>
     <string name="update_list_name">Aggiorna nome elenco</string>
+    <string name="use_method">Usa metodo</string>
     <string name="user_email_hint">La tua e-mail (opzionale)</string>
     <string name="user_message_hint">Per consentirci di assisterti meglio, scrivi in ​​inglese o in svedese e indica da quale Paese ti stai connettendo.</string>
     <string name="username">Nome utente</string>
+    <string name="verifying_api_method">Verifica del metodo API...</string>
     <string name="verifying_voucher">Verifica del voucher…</string>
     <string name="view_logs">Visualizza registri app</string>
     <string name="virtual_adapter_problem">Errore scheda virtuale</string>
