--- a/android/lib/resource/src/main/res/values-ko/strings.xml
+++ b/android/lib/resource/src/main/res/values-ko/strings.xml
@@ -17,6 +17,7 @@
     <string name="add_method">방법 추가</string>
     <string name="add_time_to_account">웹 사이트에서 크레딧을 구매하거나 바우처를 사용하세요.</string>
     <string name="added_to_your_account">%1$s이(가) 계정에 추가되었습니다.</string>
+    <string name="adding_method">방법 추가 중...</string>
     <string name="agree_and_continue">동의하고 계속하기</string>
     <string name="all_applications">모든 애플리케이션</string>
     <string name="all_locations">모든 위치</string>
@@ -27,12 +28,16 @@
     <string name="any">모두</string>
     <string name="api_access_description">Mullvad API에 액세스하기 위한 사용자 지정 방법을 관리하고 추가합니다.</string>
     <string name="api_access_method_info_first_line">이 앱은 로그인, 서버 목록 가져오기 및 기타 중요한 작업을 위해 Mullvad API 서버와 통신해야 합니다.</string>
+    <string name="api_access_method_info_fourth_line">\"현재\" 방법은 앱이 API에 연결하기 위해 사용하는 방법을 나타냅니다.</string>
     <string name="api_access_method_info_second_line">다양한 유형의 검열이 사용되고 있는 일부 네트워크에서는 API 서버에 직접 연결하지 못할 수도 있습니다.</string>
     <string name="api_access_method_info_third_line">이 기능을 사용하면 프록시 및 유사한 방법을 통해 API에 액세스하는 사용자 지정 방법을 추가하여 검열을 우회할 수 있습니다.</string>
     <string name="api_reachable">API 연결 가능</string>
+    <string name="api_reachable_adding_method">API 연결 가능, 방법 추가 중...</string>
     <string name="api_unreachable">API 연결 불가</string>
+    <string name="api_unreachable_save_anyway">API 연결 불가, 그래도 이 방법을 저장하시겠습니까?</string>
     <string name="app_version">앱 버전</string>
     <string name="apply">적용</string>
+    <string name="at_least_on_method_needs_to_enabled">1개 이상의 방법이 활성화되어 있어야 합니다</string>
     <string name="auth_failed">계정을 인증할 수 없습니다. 문제 보고서를 보내주세요.</string>
     <string name="authentication">인증</string>
     <string name="auto_connect">자동 연결</string>
@@ -42,7 +47,11 @@
     <string name="auto_connect_carousel_first_slide_top_text">자동 연결 및 잠금 모드 설정은 Android 시스템 설정에서 찾을 수 있습니다. 이 가이드에 따라 하나 또는 둘 다를 활성화하세요.</string>
     <string name="auto_connect_carousel_second_slide_bottom_text">2. 자동 연결을 활성화하려면 &lt;b&gt;상시 접속 VPN&lt;/b&gt; 옆에 있는 토글을 클릭합니다.</string>
     <string name="auto_connect_carousel_second_slide_top_text">자동 연결은 Android 시스템 설정에서 상시 접속 VPN이라고 하며 VPN 터널에 지속적으로 연결되고 다시 시작한 후 자동 연결되게 해줍니다.</string>
+    <string name="auto_connect_carousel_third_slide_bottom_text">3. 잠금 모드를 활성화하려면 &lt;b&gt;VPN 없이 연결 차단&lt;/b&gt; 옆에 있는 토글을 클릭합니다.&lt;br /&gt;&lt;br /&gt;&lt;b&gt;경고: 이 설정은 분할 앱과 로컬 네트워크 공유 기능을 차단합니다.&lt;/b&gt;</string>
+    <string name="auto_connect_carousel_third_slide_top_text">잠금 모드는 Android 시스템 설정에서 &lt;b&gt;VPN 없이 연결 차단&lt;/b&gt;이라고 합니다. 유출을 최소화하는 데 도움이 되지만, 몇 가지 알려진 제한 사항이 있습니다. 다음에서 자세한 내용을 확인하세요.</string>
+    <string name="auto_connect_carousel_third_slide_top_text_website_link">여기</string>
     <string name="auto_connect_footer_legacy">위의 &lt;b&gt;%1$s&lt;/b&gt; 가이드에 따라 &lt;b&gt;상시 접속&lt;/b&gt; 시스템 설정을 대신 사용하세요.</string>
+    <string name="auto_connect_footer_legacy_tv">앱 실행 시 자동으로 연결합니다. 이 설정은 이후 업데이트에서 장치 시작 기능에 대한 새로운 연결로 대체됩니다.</string>
     <string name="auto_connect_legacy">자동 연결(레거시)</string>
     <string name="automatic">자동</string>
     <string name="back">뒤로</string>
@@ -79,6 +88,7 @@
     <string name="creating_new_account">계정 생성 중...</string>
     <string name="creating_secure_connection">보안 연결 생성 중</string>
     <string name="critical_error">심각한 오류(주의가 필요함)</string>
+    <string name="current_method">현재: %1$s</string>
     <string name="custom_dns_disable_mode_subtitle">이 설정을 활성화하려면 위의 모든 &lt;b&gt;%1$s&lt;/b&gt;을(를) 비활성화하세요.</string>
     <string name="custom_dns_footer">하나 이상의 DNS 서버를 추가하려면 활성화합니다.</string>
     <string name="custom_dns_hint">IP 입력</string>
@@ -94,6 +104,8 @@
     <string name="delete_custom_list_confirmation_description">\"%1$s\"을(를) 삭제하시겠습니까?</string>
     <string name="delete_custom_list_message">\"%1$s\"이(가) 삭제되었습니다</string>
     <string name="delete_list">목록 삭제</string>
+    <string name="delete_method">방법 삭제</string>
+    <string name="delete_method_question">이 방법을 삭제하시겠습니까?</string>
     <string name="device_inactive_description">이 장치를 제거했습니다. 다시 연결하려면 다시 로그인해야 합니다.</string>
     <string name="device_inactive_title">장치가 비활성 상태입니다.</string>
     <string name="device_inactive_unblock_warning">로그인하면 이 장치에서 인터넷 차단이 해제됩니다.</string>
@@ -122,6 +134,7 @@
     <string name="edit_name">이름 편집</string>
     <string name="enable">사용</string>
     <string name="enable_custom_dns">사용자 지정 DNS 서버 사용</string>
+    <string name="enable_method">방법 활성화</string>
     <string name="enter_value_placeholder">MTU 입력</string>
     <string name="enter_voucher_code">바우처 코드 입력</string>
     <string name="error_occurred">오류가 발생했습니다.</string>
@@ -133,6 +146,8 @@
     <string name="failed_to_remove_device">장치를 제거하지 못함</string>
     <string name="failed_to_send">전송하지 못함</string>
     <string name="failed_to_send_details">양식을 종료한 후 나중에 다시 시도해도 이미 입력한 정보는 그대로 유지됩니다.</string>
+    <string name="failed_to_set_current_test_error">현재로 설정하지 못함 - API 연결 불가</string>
+    <string name="failed_to_set_current_unknown_error">현재로 설정하지 못함 - 알 수 없는 이유</string>
     <string name="faqs_and_guides">FAQ 및 가이드</string>
     <string name="filter">필터</string>
     <string name="filtered">필터링됨:</string>
@@ -209,6 +224,7 @@
     <string name="ownership">소유권</string>
     <string name="paid_until">유효 기간</string>
     <string name="password">암호</string>
+    <string name="password_optional">암호(옵션)</string>
     <string name="patch_not_matching_specification">사양과 일치하지 않는 패치</string>
     <string name="pay_to_start_using">앱 사용을 시작하려면, 먼저 계정에 시간을 추가해야 합니다.</string>
     <string name="payment_billing_error_dialog_message">결제 프로세스를 시작할 수 없습니다. Google Play가 최신 버전인지 확인하세요.</string>
@@ -220,6 +236,8 @@
     <string name="payment_pending_dialog_message">구매를 현재 확인하는 중이므로 다소 시간이 걸릴 수 있습니다. 확인을 성공적으로 마치면 시간이 추가됩니다.</string>
     <string name="payment_pending_dialog_title">구매 확인 중</string>
     <string name="payment_status_pending">Google Play 결제 보류 중</string>
+    <string name="please_enter_a_valid_ip_address">유효한 IPv4 또는 IPv6 주소를 입력하세요</string>
+    <string name="please_enter_a_valid_remote_server_port">유효한 원격 서버 포트를 입력하세요</string>
     <string name="port">포트</string>
     <string name="privacy_disclaimer_body_first_paragraph">가장 안전한 버전인지 확인하고 현재 실행 중인 버전에 문제가 있으면 알려드리기 위해 앱에서 자동으로 버전 확인을 수행합니다. 그러면 앱 버전과 Android 시스템 버전이 Mullvad 서버로 전송됩니다. Mullvad는 사용된 앱 버전 및 Android 버전 수에 대한 카운터를 유지합니다. 이 데이터는 귀하를 식별할 수 있는 어떤 방식으로도 저장되거나 사용되지 않습니다.</string>
     <string name="privacy_disclaimer_body_second_paragraph">분할 터널링 기능을 사용하는 경우, 이 앱은 설치된 모든 애플리케이션 목록을 시스템에 쿼리합니다. 이 목록은 분할 터널링 보기에서만 검색됩니다. 설치된 애플리케이션 목록은 장치에서 전송되지 않습니다.</string>
@@ -292,7 +310,11 @@
     <string name="submit_button">제출</string>
     <string name="switch_location">위치 전환</string>
     <string name="tcp">TCP</string>
+    <string name="test_method">방법 테스트</string>
     <string name="testing">테스트 중...</string>
+    <string name="testing_name">%1$s 테스트 중...</string>
+    <string name="this_field_is_required">이 필드는 필수입니다</string>
+    <string name="this_is_already_set_as_current">이미 현재로 설정되어 있습니다</string>
     <string name="to_add_locations_to_a_list">목록에 위치를 추가하려면 \"︙\"를 누르거나 국가, 도시 또는 서버를 길게 누릅니다.</string>
     <string name="to_create_a_custom_list">사용자 지정 목록을 생성하려면 \"︙\"를 누릅니다</string>
     <string name="toggle_vpn">VPN 전환</string>
@@ -307,6 +329,7 @@
     <string name="undo">실행 취소</string>
     <string name="unsecured">안전하지 않음</string>
     <string name="unsecured_connection">비보안 연결</string>
+    <string name="unsecured_vpn_permission_error">보안되지 않음(VPN 권한 없음)</string>
     <string name="unsupported_version">지원되지 않는 버전</string>
     <string name="unsupported_version_description">지원되지 않는 이 앱 버전으로 인해 개인 정보가 위험할 수 있습니다. 지금 업데이트하세요.</string>
     <string name="unsupported_version_without_upgrade">지원되지 않는 앱 버전을 실행 중입니다.</string>
@@ -315,9 +338,11 @@
     <string name="update_available_footer">업데이트를 사용할 수 있습니다. 안전을 유지하기 위해 다운로드하세요.</string>
     <string name="update_dns_server_dialog_title">DNS 서버 업데이트</string>
     <string name="update_list_name">목록 이름 업데이트</string>
+    <string name="use_method">방법 사용</string>
     <string name="user_email_hint">이메일(선택 사항)</string>
     <string name="user_message_hint">더 나은 지원을 위해 영어 또는 스웨덴어로 메시지를 작성하고 연결 국가를 포함하세요.</string>
     <string name="username">사용자 이름</string>
+    <string name="verifying_api_method">API 방법 확인 중...</string>
     <string name="verifying_voucher">바우처 확인 중…</string>
     <string name="view_logs">앱 로그 보기</string>
     <string name="virtual_adapter_problem">가상 어댑터 오류</string>
