--- a/android/lib/resource/src/main/res/values-pl/strings.xml
+++ b/android/lib/resource/src/main/res/values-pl/strings.xml
@@ -17,6 +17,7 @@
     <string name="add_method">Dodaj metodę</string>
     <string name="add_time_to_account">Doładuj w naszej witrynie internetowej lub zrealizuj kupon.</string>
     <string name="added_to_your_account">Do konta dodano %1$s.</string>
+    <string name="adding_method">Dodawanie metody...</string>
     <string name="agree_and_continue">Zaakceptuj i kontynuuj</string>
     <string name="all_applications">Wszystkie aplikacje</string>
     <string name="all_locations">Wszystkie lokalizacje</string>
@@ -27,12 +28,16 @@
     <string name="any">Dowolny</string>
     <string name="api_access_description">Zarządzaj i dodawaj niestandardowe metody dostępu do interfejsu API Mullvad.</string>
     <string name="api_access_method_info_first_line">Aplikacja musi komunikować się z serwerem API Mullvad, aby można było się zalogować, pobrać listy serwerów i wykonywać inne krytyczne operacje.</string>
+    <string name="api_access_method_info_fourth_line">Metoda „Bieżąca” reprezentuje metodę używaną przez aplikację w celu uzyskania dostępu do interfejsu API.</string>
     <string name="api_access_method_info_second_line">W niektórych sieciach, w których stosowane są różne rodzaje cenzury, serwery API mogą nie być bezpośrednio dostępne.</string>
     <string name="api_access_method_info_third_line">Ta funkcja pozwala ominąć tę cenzurę, dodając niestandardowe sposoby dostępu do API za pośrednictwem serwerów proxy i podobnych metod.</string>
     <string name="api_reachable">API osiągalny</string>
+    <string name="api_reachable_adding_method">Interfejs API osiągalny, dodawanie metody...</string>
     <string name="api_unreachable">API nieosiągalny</string>
+    <string name="api_unreachable_save_anyway">Interfejs API nieosiągalny, zapisać metodę mimo to?</string>
     <string name="app_version">Wersja aplikacji</string>
     <string name="apply">Zastosuj</string>
+    <string name="at_least_on_method_needs_to_enabled">Należy włączyć co najmniej jedną metodę</string>
     <string name="auth_failed">Nie można uwierzytelnić konta. Wyślij zgłoszenie problemu.</string>
     <string name="authentication">Uwierzytelnianie</string>
     <string name="auto_connect">Automatyczne łączenie</string>
@@ -42,7 +47,11 @@
     <string name="auto_connect_carousel_first_slide_top_text">Ustawienia trybu automatycznego łączenia i trybu Lockdown można znaleźć w ustawieniach systemu Android. Aby włączyć jeden lub oba tryby, postępuj zgodnie z niniejszym poradnikiem.</string>
     <string name="auto_connect_carousel_second_slide_bottom_text">2. Aby włączyć automatyczne łączenie, kliknij przełącznik obok opcji &lt;b&gt;Zawsze włączony VPN&lt;/b&gt;.</string>
     <string name="auto_connect_carousel_second_slide_top_text">Automatyczne łączenie w ustawieniach systemu Android nazywa się „Zawsze włączony VPN” i zapewnia stałe połączenie z tunelem VPN oraz automatyczne łączenie po ponownym uruchomieniu.</string>
+    <string name="auto_connect_carousel_third_slide_bottom_text">3. Aby włączyć tryb Lockdown, kliknij przełącznik obok opcji &lt;b&gt;Blokuj połączenia bez VPN&lt;/b&gt;.&lt;br /&gt;&lt;br /&gt;&lt;b&gt;Ostrzeżenie: to ustawienie blokuje aplikacje dzielące i funkcję udostępniania sieci lokalnej.&lt;/b&gt;</string>
+    <string name="auto_connect_carousel_third_slide_top_text">Tryb Lockdown w ustawieniach systemu Android nazywa się &lt;b&gt;Blokuj połączenia bez VPN&lt;/b&gt;. Pomaga zminimalizować wycieki, jednak ma pewne znane ograniczenia, o których można przeczytać więcej</string>
+    <string name="auto_connect_carousel_third_slide_top_text_website_link">tutaj</string>
     <string name="auto_connect_footer_legacy">Zamiast tego użyj ustawienia systemowego &lt;b&gt;Zawsze włączone&lt;/b&gt;, postępując zgodnie z poradnikiem w powyższej sekcji &lt;b&gt;%1$s&lt;/b&gt;.</string>
+    <string name="auto_connect_footer_legacy_tv">Połącz automatycznie przy uruchamianiu aplikacji. W przyszłej aktualizacji ustawienie to zostanie zastąpione nową funkcją łączenia przy uruchamianiu urządzenia.</string>
     <string name="auto_connect_legacy">Automatyczne łączenie (starsza wersja)</string>
     <string name="automatic">Automatycznie</string>
     <string name="back">Wstecz</string>
@@ -79,6 +88,7 @@
     <string name="creating_new_account">Tworzenie konta...</string>
     <string name="creating_secure_connection">TWORZENIE BEZPIECZNEGO POŁĄCZENIA</string>
     <string name="critical_error">Błąd krytyczny (wymagana uwaga)</string>
+    <string name="current_method">Bieżąca: %1$s</string>
     <string name="custom_dns_disable_mode_subtitle">Aby aktywować to ustawienie, wyłącz powyżej wszystkie &lt;b&gt;%1$s&lt;/b&gt;.</string>
     <string name="custom_dns_footer">Włącz, aby dodać co najmniej jeden serwer DNS.</string>
     <string name="custom_dns_hint">Wprowadź adres IP</string>
@@ -94,6 +104,8 @@
     <string name="delete_custom_list_confirmation_description">Usunąć „%1$s”?</string>
     <string name="delete_custom_list_message">Usunięto „%1$s”</string>
     <string name="delete_list">Usuń listę</string>
+    <string name="delete_method">Usuń metodę</string>
+    <string name="delete_method_question">Usunąć metodę?</string>
     <string name="device_inactive_description">Urządzenie usunięto. Aby połączyć się ponownie, musisz się ponownie zalogować.</string>
     <string name="device_inactive_title">Urządzenie nieaktywne</string>
     <string name="device_inactive_unblock_warning">Przejście do logowania odblokuje Internet na tym urządzeniu.</string>
@@ -122,6 +134,7 @@
     <string name="edit_name">Edytuj nazwę</string>
     <string name="enable">Włącz</string>
     <string name="enable_custom_dns">Użyj niestandardowego serwera DNS</string>
+    <string name="enable_method">Włącz metodę</string>
     <string name="enter_value_placeholder">Wprowadź MTU</string>
     <string name="enter_voucher_code">Wprowadź kod kuponu</string>
     <string name="error_occurred">Wystąpił błąd.</string>
@@ -133,6 +146,8 @@
     <string name="failed_to_remove_device">Niepowodzenie usunięcia urządzenia</string>
     <string name="failed_to_send">Błąd wysyłania</string>
     <string name="failed_to_send_details">Jeśli wyjdziesz z formularza i spróbujesz ponownie później, zastaniesz już wprowadzone dane.</string>
+    <string name="failed_to_set_current_test_error">Nie udało się ustawić jako bieżącą — interfejs API nieosiągalny</string>
+    <string name="failed_to_set_current_unknown_error">Nie udało się ustawić jako bieżącą — przyczyna nieznana</string>
     <string name="faqs_and_guides">Często zadawane pytania i poradniki</string>
     <string name="filter">Filtruj</string>
     <string name="filtered">Odfiltrowane:</string>
@@ -209,6 +224,7 @@
     <string name="ownership">Własność</string>
     <string name="paid_until">Płatne do</string>
     <string name="password">Hasło</string>
+    <string name="password_optional">Hasło (opcjonalnie)</string>
     <string name="patch_not_matching_specification">Poprawka niezgodna ze specyfikacją</string>
     <string name="pay_to_start_using">Aby rozpocząć korzystanie z aplikacji, musisz najpierw dodać czas do swojego konta.</string>
     <string name="payment_billing_error_dialog_message">Nie mogliśmy rozpocząć procesu płatności. Upewnij się, że masz najnowszą wersję aplikacji Google Play.</string>
@@ -220,6 +236,8 @@
     <string name="payment_pending_dialog_message">Weryfikujemy zakup. Może to zająć trochę czasu. Jeśli weryfikacja powiedzie się, czas zostanie dodany.</string>
     <string name="payment_pending_dialog_title">Weryfikowanie zakupu</string>
     <string name="payment_status_pending">Oczekiwanie na płatność Google Play</string>
+    <string name="please_enter_a_valid_ip_address">Wprowadź prawidłowy adres IPv4 lub IPv6</string>
+    <string name="please_enter_a_valid_remote_server_port">Wprowadź prawidłowy port serwera zdalnego</string>
     <string name="port">Port</string>
     <string name="privacy_disclaimer_body_first_paragraph">Aby upewnić się, że masz najbezpieczniejszą wersję i poinformować Cię o wszelkich problemach z aktualnie uruchomioną wersją, aplikacja automatycznie sprawdza wersję. Powoduje to wysłanie wersji aplikacji i wersji systemu Android na serwery Mullvad. Mullvad prowadzi liczniki używanych wersji aplikacji i wersji systemu Android. Dane te nigdy nie są przechowywane ani wykorzystywane w żaden sposób, który umożliwiłby zidentyfikowanie Ciebie jako osoby.</string>
     <string name="privacy_disclaimer_body_second_paragraph">Jeśli używana jest funkcja dzielonego tunelowania, aplikacja wysyła do systemu zapytanie o listę wszystkich zainstalowanych aplikacji. Lista ta jest pobierana wyłącznie w widoku dzielonego tunelowania. Lista zainstalowanych aplikacji nigdy nie jest wysyłana z urządzenia.</string>
@@ -292,7 +310,11 @@
     <string name="submit_button">Prześlij</string>
     <string name="switch_location">Zmień lokalizację</string>
     <string name="tcp">TCP</string>
+    <string name="test_method">Przetestuj metodę</string>
     <string name="testing">Testowanie...</string>
+    <string name="testing_name">Testowanie %1$s...</string>
+    <string name="this_field_is_required">To pole jest wymagane</string>
+    <string name="this_is_already_set_as_current">Już ustawiona jako bieżąca</string>
     <string name="to_add_locations_to_a_list">Aby dodać lokalizacje do listy, naciśnij przycisk „︙” lub naciśnij i przytrzymaj kraj, miasto albo serwer.</string>
     <string name="to_create_a_custom_list">Aby utworzyć listę niestandardową, naciśnij przycisk „︙”</string>
     <string name="toggle_vpn">Przełącz VPN</string>
@@ -307,6 +329,7 @@
     <string name="undo">Cofnij</string>
     <string name="unsecured">Niezabezpieczone</string>
     <string name="unsecured_connection">NIEZABEZPIECZONE POŁĄCZENIE</string>
+    <string name="unsecured_vpn_permission_error">Niezabezpieczony (brak uprawnienia VPN)</string>
     <string name="unsupported_version">WERSJA NIEOBSŁUGIWANA</string>
     <string name="unsupported_version_description">W tej nieobsługiwanej wersji aplikacji prywatność może być zagrożona. Zaktualizuj już teraz.</string>
     <string name="unsupported_version_without_upgrade">Używasz nieobsługiwanej wersji aplikacji.</string>
@@ -315,9 +338,11 @@
     <string name="update_available_footer">Dostępna jest aktualizacja. Aby zachować bezpieczeństwo, pobierz ją.</string>
     <string name="update_dns_server_dialog_title">Zaktualizuj serwer DNS</string>
     <string name="update_list_name">Zaktualizuj nazwę listy</string>
+    <string name="use_method">Użyj metody</string>
     <string name="user_email_hint">Twój adres e-mail (opcjonalnie)</string>
     <string name="user_message_hint">Abyśmy mogli lepiej Ci pomóc, napisz w języku angielskim lub szwedzkim i podaj kraj, z którego się łączysz.</string>
     <string name="username">Nazwa użytkownika</string>
+    <string name="verifying_api_method">Weryfikowanie metody interfejsu API...</string>
     <string name="verifying_voucher">Weryfikowanie kuponu…</string>
     <string name="view_logs">Wyświetl dzienniki aplikacji</string>
     <string name="virtual_adapter_problem">Błąd wirtualnej karty sieciowej</string>
