--- a/android/lib/resource/src/main/res/values-pt/strings.xml
+++ b/android/lib/resource/src/main/res/values-pt/strings.xml
@@ -16,7 +16,8 @@
     <string name="add_locations">Adicionar localizações</string>
     <string name="add_method">Adicionar método</string>
     <string name="add_time_to_account">Compre crédito no nosso sítio da web ou reclame um voucher.</string>
-    <string name="added_to_your_account">%1$s foi adicionado à sua conta.</string>
+    <string name="added_to_your_account">%1$s adicionado(s) à sua conta.</string>
+    <string name="adding_method">A adicionar método...</string>
     <string name="agree_and_continue">Concordar e continuar</string>
     <string name="all_applications">Todas as aplicações</string>
     <string name="all_locations">Todas as localizações</string>
@@ -27,12 +28,16 @@
     <string name="any">Qualquer</string>
     <string name="api_access_description">Gerir e adicionar métodos personalizados para aceder à Mullvad API.</string>
     <string name="api_access_method_info_first_line">A app precisa de comunicar com um servidor da Mullvad API para iniciar a sua sessão, obter listas de servidores e outras operações críticas.</string>
+    <string name="api_access_method_info_fourth_line">O método \"Atual\" representa o método que a aplicação está a utilizar para aceder à API.</string>
     <string name="api_access_method_info_second_line">Em algumas redes, onde são utilizados vários tipos de censura, os servidores de API podem não ser diretamente alcançáveis.</string>
     <string name="api_access_method_info_third_line">Esta funcionalidade permite-lhe contornar essa censura, adicionando formas personalizadas de aceder à API através de proxies e métodos semelhantes.</string>
     <string name="api_reachable">API alcançável</string>
+    <string name="api_reachable_adding_method">API alcançável, a adicionar método...</string>
     <string name="api_unreachable">API inalcançável</string>
+    <string name="api_unreachable_save_anyway">API inalcançável, guardar o método mesmo assim?</string>
     <string name="app_version">Versão da app</string>
     <string name="apply">Aplicar</string>
+    <string name="at_least_on_method_needs_to_enabled">É necessário ativar pelo menos um método</string>
     <string name="auth_failed">Não foi possível autenticar a conta. Envie um relatório do problema.</string>
     <string name="authentication">Autenticação</string>
     <string name="auto_connect">Ligação automática</string>
@@ -42,7 +47,11 @@
     <string name="auto_connect_carousel_first_slide_top_text">As definições da ligação automática e do modo de bloqueio podem ser encontradas nas definições do sistema Android. Siga este guia para ativar uma ou ambas as funcionalidades.</string>
     <string name="auto_connect_carousel_second_slide_bottom_text">2. Para ativar a ligação automática, clique no botão de alternar junto a &lt;b&gt;VPN sempre ligada&lt;/b&gt;.</string>
     <string name="auto_connect_carousel_second_slide_top_text">A ligação automática é designada por VPN sempre ligada nas definições do sistema Android e assegura que está constantemente ligado ao túnel VPN e ligar-se-á automaticamente após o reinício.</string>
+    <string name="auto_connect_carousel_third_slide_bottom_text">3. Para ativar o modo de bloqueio, clique no botão de alternar junto a &lt;b&gt;Bloquear ligações sem VPN&lt;/b&gt;.&lt;br /&gt;&lt;br /&gt;&lt;b&gt;Aviso: esta definição bloqueia as aplicações divididas e a funcionalidade de partilha de rede local.&lt;/b&gt;</string>
+    <string name="auto_connect_carousel_third_slide_top_text">O modo de bloqueio é chamado &lt;b&gt;Bloquear ligações sem VPN&lt;/b&gt; nas definições do sistema Android. Ajuda a minimizar fugas, mas tem algumas limitações conhecidas sobre as quais pode ler mais</string>
+    <string name="auto_connect_carousel_third_slide_top_text_website_link">aqui</string>
     <string name="auto_connect_footer_legacy">Alternativamente, utilize a definição de sistema &lt;b&gt;Sempre ligada&lt;/b&gt;, seguindo o guia em &lt;b&gt;%1$s&lt;/b&gt; acima.</string>
+    <string name="auto_connect_footer_legacy_tv">Ligar automaticamente quando a aplicação é iniciada. Esta definição será substituída por uma nova funcionalidade de ligação no arranque do dispositivo numa futura atualização.</string>
     <string name="auto_connect_legacy">Ligação automática (método antigo)</string>
     <string name="automatic">Automático</string>
     <string name="back">Retroceder</string>
@@ -79,6 +88,7 @@
     <string name="creating_new_account">A criar conta...</string>
     <string name="creating_secure_connection">A CRIAR LIGAÇÃO SEGURA</string>
     <string name="critical_error">Erro crítico (é necessária a sua atenção)</string>
+    <string name="current_method">Atual: %1$s</string>
     <string name="custom_dns_disable_mode_subtitle">Desative todos os &lt;b&gt;%1$s&lt;/b&gt; abaixo para ativar esta definição.</string>
     <string name="custom_dns_footer">Ativar para adicionar pelo menos um servidor DNS.</string>
     <string name="custom_dns_hint">Introduzir IP</string>
@@ -94,6 +104,8 @@
     <string name="delete_custom_list_confirmation_description">Eliminar \"%1$s\"?</string>
     <string name="delete_custom_list_message">\"%1$s\" foi eliminada</string>
     <string name="delete_list">Eliminar lista</string>
+    <string name="delete_method">Eliminar método</string>
+    <string name="delete_method_question">Eliminar método?</string>
     <string name="device_inactive_description">Removeu este dispositivo. Para voltar a ligar o dispositivo, terá de voltar a iniciar a sessão.</string>
     <string name="device_inactive_title">O dispositivo está desativado</string>
     <string name="device_inactive_unblock_warning">Ir para a ligação irá desbloquear a Internet neste dispositivo.</string>
@@ -122,6 +134,7 @@
     <string name="edit_name">Editar nome</string>
     <string name="enable">Ativar</string>
     <string name="enable_custom_dns">Usar servidor DNS personalizado</string>
+    <string name="enable_method">Ativar método</string>
     <string name="enter_value_placeholder">Introduzir MTU</string>
     <string name="enter_voucher_code">Introduza o código do voucher</string>
     <string name="error_occurred">Ocorreu um erro.</string>
@@ -133,6 +146,8 @@
     <string name="failed_to_remove_device">Erro ao remover dispositivo</string>
     <string name="failed_to_send">Erro no envio</string>
     <string name="failed_to_send_details">Se sair do formulário e tentar novamente mais tarde, a informação que já tiver introduzido continuará aqui.</string>
+    <string name="failed_to_set_current_test_error">Erro ao definir como atual — API não alcançável</string>
+    <string name="failed_to_set_current_unknown_error">Erro ao definir como atual — motivo desconhecido</string>
     <string name="faqs_and_guides">Perguntas frequentes e guias</string>
     <string name="filter">Filtrar</string>
     <string name="filtered">Filtrado:</string>
@@ -209,7 +224,8 @@
     <string name="ownership">Propriedade</string>
     <string name="paid_until">Pago até</string>
     <string name="password">Palavra-passe</string>
-    <string name="patch_not_matching_specification">A correção não corresponde à especificação</string>
+    <string name="password_optional">Palavra-passe (opcional)</string>
+    <string name="patch_not_matching_specification">O patch não corresponde à especificação</string>
     <string name="pay_to_start_using">Para começar a utilizar a aplicação, primeiro tem de adicionar tempo à sua conta.</string>
     <string name="payment_billing_error_dialog_message">Não foi possível iniciar o processo de pagamento. Verifique se tem a versão mais recente do Google Play.</string>
     <string name="payment_billing_error_dialog_title">Google Play indisponível</string>
@@ -220,6 +236,8 @@
     <string name="payment_pending_dialog_message">Estamos atualmente a verificar a sua compra, o que poderá demorar algum tempo. O seu tempo será adicionado se a verificação for bem sucedida.</string>
     <string name="payment_pending_dialog_title">Verificação de compra</string>
     <string name="payment_status_pending">Pagamento Google Play pendente</string>
+    <string name="please_enter_a_valid_ip_address">Introduza um endereço IPv4 ou IPv6 válido</string>
+    <string name="please_enter_a_valid_remote_server_port">Introduza uma porta de servidor remoto válida</string>
     <string name="port">Porta</string>
     <string name="privacy_disclaimer_body_first_paragraph">Para se certificar de que tem a versão mais segura e para o informar de quaisquer problemas com a versão atual em execução, a app efetua verificações de versão automaticamente. Esta envia a versão da app e a versão do sistema Android para os servidores da Mullvad. A Mullvad mantém um registo do número de versões da app e de versões do Android utilizadas. Os dados nunca são armazenados ou utilizados de forma a identificar o utilizador.</string>
     <string name="privacy_disclaimer_body_second_paragraph">Se for utilizada a funcionalidade de divisão do túnel, a app consulta o seu sistema para obter uma lista de todas as aplicações instaladas. Esta lista só é recuperada na vista de divisão do túnel. A lista de aplicações instaladas nunca é enviada pelo dispositivo.</string>
@@ -292,7 +310,11 @@
     <string name="submit_button">Enviar</string>
     <string name="switch_location">Alterar local</string>
     <string name="tcp">TCP</string>
+    <string name="test_method">Testar método</string>
     <string name="testing">A testar...</string>
+    <string name="testing_name">A testar %1$s...</string>
+    <string name="this_field_is_required">Este campo é obrigatório</string>
+    <string name="this_is_already_set_as_current">Este já está definido como o atual</string>
     <string name="to_add_locations_to_a_list">Para adicionar localizações a uma lista, prima o botão \"︙\" ou mantenha premido um país, uma cidade ou um servidor.</string>
     <string name="to_create_a_custom_list">Para criar uma lista personalizada prima o botão \"︙\"</string>
     <string name="toggle_vpn">Alternar VPN</string>
@@ -307,6 +329,7 @@
     <string name="undo">Anular</string>
     <string name="unsecured">Inseguro</string>
     <string name="unsecured_connection">LIGAÇÃO INSEGURA</string>
+    <string name="unsecured_vpn_permission_error">Inseguro (sem permissão de VPN)</string>
     <string name="unsupported_version">VERSÃO NÃO SUPORTADA</string>
     <string name="unsupported_version_description">A sua privacidade pode estar comprometida com uma versão não suportada da aplicação. Por favor efetue a atualização agora.</string>
     <string name="unsupported_version_without_upgrade">Está a executar uma versão da aplicação não suportada.</string>
@@ -315,9 +338,11 @@
     <string name="update_available_footer">Atualização disponível, transfira-a para ficar seguro.</string>
     <string name="update_dns_server_dialog_title">Atualizar servidor DNS</string>
     <string name="update_list_name">Atualizar nome da lista</string>
+    <string name="use_method">Utilizar método</string>
     <string name="user_email_hint">O seu email (opcional)</string>
     <string name="user_message_hint">Para o ajudar melhor, escreva em inglês ou sueco e indique o país de onde está a efetuar a ligação.</string>
     <string name="username">Nome de utilizador</string>
+    <string name="verifying_api_method">A verificar método de API...</string>
     <string name="verifying_voucher">A verificar voucher…</string>
     <string name="view_logs">Ver os registos da app</string>
     <string name="virtual_adapter_problem">Erro de adaptador virtual</string>
