--- a/android/lib/resource/src/main/res/values-ru/strings.xml
+++ b/android/lib/resource/src/main/res/values-ru/strings.xml
@@ -12,11 +12,12 @@
     <string name="add_30_days_time_x">Добавить 30 дней (%1$s)</string>
     <string name="add_a_server">Добавить сервер</string>
     <string name="add_dns_server_dialog_title">Добавить DNS-сервер</string>
-    <string name="add_location_to_list">Добавление местоположения %1$s к списку</string>
+    <string name="add_location_to_list">Добавить местоположение %1$s к списку</string>
     <string name="add_locations">Добавление местоположений</string>
     <string name="add_method">Добавление метода</string>
     <string name="add_time_to_account">Пополните баланс у нас на сайте или погасите ваучер.</string>
     <string name="added_to_your_account">На учетную запись добавлено время: %1$s.</string>
+    <string name="adding_method">Добавление метода...</string>
     <string name="agree_and_continue">Согласиться и продолжить</string>
     <string name="all_applications">Все приложения</string>
     <string name="all_locations">Все местоположения</string>
@@ -27,12 +28,16 @@
     <string name="any">Все</string>
     <string name="api_access_description">Добавление пользовательских методов для доступа к API Mullvad и управление ими.</string>
     <string name="api_access_method_info_first_line">Приложение должно взаимодействовать с сервером API Mullvad для входа в учетную запись, получения списков серверов и других важных операций.</string>
+    <string name="api_access_method_info_fourth_line">«Текущий» метод — это метод, который приложение использует для связи с API.</string>
     <string name="api_access_method_info_second_line">В некоторых сетях, где используются различные виды цензуры, серверы API могут быть недоступны напрямую.</string>
     <string name="api_access_method_info_third_line">Эта функция позволяет обойти такую цензуру, добавив пользовательские способы доступа к API через прокси-серверы и другие подобные методы.</string>
     <string name="api_reachable">Есть доступ к API</string>
+    <string name="api_reachable_adding_method">Есть доступ к API, добавляем метод...</string>
     <string name="api_unreachable">Нет доступа к API</string>
+    <string name="api_unreachable_save_anyway">Нет доступа к API. Сохранить метод?</string>
     <string name="app_version">Версия приложения</string>
     <string name="apply">Применить</string>
+    <string name="at_least_on_method_needs_to_enabled">Должен быть включен хотя бы один метод</string>
     <string name="auth_failed">Не удается произвести аутентификацию учетной записи. Отправьте сообщение о проблеме.</string>
     <string name="authentication">Аутентификация</string>
     <string name="auto_connect">Автоподключение</string>
@@ -42,7 +47,11 @@
     <string name="auto_connect_carousel_first_slide_top_text">Настройки автоподключения и режима блокировки можно найти в системных настройках Android. Чтобы включить их, следуйте этой инструкции.</string>
     <string name="auto_connect_carousel_second_slide_bottom_text">2. Чтобы включить автоподключение, нажмите на переключатель возле опции &lt;b&gt;Постоянная VPN&lt;/b&gt;.</string>
     <string name="auto_connect_carousel_second_slide_top_text">В системных настройках Android автоподключение называется «Постоянная VPN». Эта опция обеспечивает постоянное подключение к туннелю VPN и автоподключение после перезапуска.</string>
+    <string name="auto_connect_carousel_third_slide_bottom_text">3. Чтобы включить режим блокировки, нажмите на переключатель рядом с пунктом &lt;b&gt;Блокировать соединения без VPN&lt;/b&gt;.&lt;br /&gt;&lt;br /&gt;&lt;b&gt;Внимание: этот параметр блокирует приложения из списка раздельного туннелирования и функцию «Обмен данными в локальной сети».&lt;/b&gt;</string>
+    <string name="auto_connect_carousel_third_slide_top_text">В системных настройках Android режим блокировки называется &lt;b&gt;Блокировать соединения без VPN&lt;/b&gt;. Он помогает минимизировать утечки, однако имеет ряд известных ограничений, о которых можно прочитать подробнее</string>
+    <string name="auto_connect_carousel_third_slide_top_text_website_link">здесь</string>
     <string name="auto_connect_footer_legacy">Вместо этого используйте системную настройку &lt;b&gt;Постоянная VPN&lt;/b&gt;, следуя инструкциям в разделе &lt;b&gt;%1$s&lt;/b&gt; выше.</string>
+    <string name="auto_connect_footer_legacy_tv">Автоматически подключаться при запуске приложения. В будущем эта опция будет заменена новой функцией подключения при запуске устройства.</string>
     <string name="auto_connect_legacy">Автоподключение (устаревшее)</string>
     <string name="automatic">Автоматически</string>
     <string name="back">Назад</string>
@@ -79,6 +88,7 @@
     <string name="creating_new_account">Создание учетной записи...</string>
     <string name="creating_secure_connection">СОЗДАНИЕ ЗАЩИЩЕННОГО ПОДКЛЮЧЕНИЯ</string>
     <string name="critical_error">Критическая ошибка (требуется ваше участие)</string>
+    <string name="current_method">Текущий: %1$s</string>
     <string name="custom_dns_disable_mode_subtitle">Чтобы включить эту настройку, отключите все &lt;b&gt;%1$s&lt;/b&gt; выше.</string>
     <string name="custom_dns_footer">Чтобы добавить как минимум один DNS-сервер, включите этот параметр.</string>
     <string name="custom_dns_hint">Введите IP-адрес</string>
@@ -94,6 +104,8 @@
     <string name="delete_custom_list_confirmation_description">Удалить список «%1$s»?</string>
     <string name="delete_custom_list_message">Список «%1$s» удален</string>
     <string name="delete_list">Удалить список</string>
+    <string name="delete_method">Удалить метод</string>
+    <string name="delete_method_question">Удалить метод?</string>
     <string name="device_inactive_description">Вы удалили это устройство. Чтобы снова подключиться, нужно будет выполнить вход.</string>
     <string name="device_inactive_title">Устройство неактивно</string>
     <string name="device_inactive_unblock_warning">Вход в профиль разблокирует Интернет на этом устройстве.</string>
@@ -122,6 +134,7 @@
     <string name="edit_name">Изменить имя</string>
     <string name="enable">Включить</string>
     <string name="enable_custom_dns">Пользовательский DNS-сервер</string>
+    <string name="enable_method">Включить метод</string>
     <string name="enter_value_placeholder">Введите MTU</string>
     <string name="enter_voucher_code">Введите код ваучера</string>
     <string name="error_occurred">Произошла ошибка.</string>
@@ -133,6 +146,8 @@
     <string name="failed_to_remove_device">Не удалось удалить устройство</string>
     <string name="failed_to_send">Ошибка отправки</string>
     <string name="failed_to_send_details">Если вы выйдете из формы и повторите попытку позже, информация, которую вы уже ввели, сохранится.</string>
+    <string name="failed_to_set_current_test_error">Не удалось установить текущий метод: API недоступен</string>
+    <string name="failed_to_set_current_unknown_error">Не удалось установить текущий метод: причина неизвестна</string>
     <string name="faqs_and_guides">Ответы на вопросы и руководства</string>
     <string name="filter">Фильтр</string>
     <string name="filtered">Фильтр:</string>
@@ -209,6 +224,7 @@
     <string name="ownership">Собственность</string>
     <string name="paid_until">Оплачено до</string>
     <string name="password">Пароль</string>
+    <string name="password_optional">Пароль (необязательно)</string>
     <string name="patch_not_matching_specification">Патч не соответствует спецификации</string>
     <string name="pay_to_start_using">Чтобы пользоваться приложением, нужно добавить время на учетную запись.</string>
     <string name="payment_billing_error_dialog_message">Не удалось начать процесс оплаты — убедитесь, что у вас установлена последняя версия Google Play.</string>
@@ -220,6 +236,8 @@
     <string name="payment_pending_dialog_message">Сейчас мы проверяем, прошла ли оплата; нужно немного подождать. Если проверка завершится успешно, мы добавим оплаченное время.</string>
     <string name="payment_pending_dialog_title">Идет проверка оплаты</string>
     <string name="payment_status_pending">Ожидается оплата в Google Play</string>
+    <string name="please_enter_a_valid_ip_address">Введите действительный адрес IPv4 или IPv6</string>
+    <string name="please_enter_a_valid_remote_server_port">Введите действительный порт удаленного сервера</string>
     <string name="port">Порт</string>
     <string name="privacy_disclaimer_body_first_paragraph">Чтобы удостовериться, что вы используете наиболее безопасную версию приложения, и сообщить вам о возможных проблемах в ней, приложение автоматически проверяет свою версию. При этом на серверы Mullvad передаются данные о версии приложения и системы Android. Mullvad ведет учет количества пользователей с определенными версиями приложения и ОС Android. Эти данные не хранятся и не используются каким бы то ни было образом, позволяющим вас идентифицировать.</string>
     <string name="privacy_disclaimer_body_second_paragraph">Если используется функция раздельного туннелирования, то приложение запрашивает в системе список всех установленных приложений. Этот список запрашивается только на  экране настройки раздельного туннелирования. Список установленных приложений никогда не передается за пределы устройства.</string>
@@ -236,7 +254,7 @@
     <string name="redeem">Погасить</string>
     <string name="redeem_voucher">Погасить ваучер</string>
     <string name="remove_button">Удалить</string>
-    <string name="remove_location_from_list">Удаление местоположения %1$s из списка</string>
+    <string name="remove_location_from_list">Удалить местоположение %1$s из списка</string>
     <string name="rented">Арендованные</string>
     <string name="rented_only">Только арендованные</string>
     <string name="report_a_problem">Сообщение о проблеме</string>
@@ -292,7 +310,11 @@
     <string name="submit_button">Отправить</string>
     <string name="switch_location">Сменить местоположение</string>
     <string name="tcp">TCP</string>
+    <string name="test_method">Проверить метод</string>
     <string name="testing">Проверка...</string>
+    <string name="testing_name">Проверка метода «%1$s»...</string>
+    <string name="this_field_is_required">Это обязательное поле</string>
+    <string name="this_is_already_set_as_current">Этот метод уже установлен как текущий</string>
     <string name="to_add_locations_to_a_list">Чтобы добавить местоположения в список, нажмите «︙» или нажмите и удерживайте страну, город или сервер.</string>
     <string name="to_create_a_custom_list">Чтобы создать свой список, нажмите «︙»</string>
     <string name="toggle_vpn">Включение VPN</string>
@@ -307,6 +329,7 @@
     <string name="undo">Отменить</string>
     <string name="unsecured">Подключение не защищено</string>
     <string name="unsecured_connection">НЕЗАЩИЩЕННОЕ ПОДКЛЮЧЕНИЕ</string>
+    <string name="unsecured_vpn_permission_error">Незащищенное (нет разрешения для VPN)</string>
     <string name="unsupported_version">НЕПОДДЕРЖИВАЕМАЯ ВЕРСИЯ</string>
     <string name="unsupported_version_description">Эта версия приложения не поддерживается, что может угрожать неприкосновенности ваших данных. Обновите приложение.</string>
     <string name="unsupported_version_without_upgrade">Версия приложения, с которой вы работаете, не поддерживается.</string>
@@ -315,9 +338,11 @@
     <string name="update_available_footer">Вышло обновление. Установите его, чтобы защитить подключения.</string>
     <string name="update_dns_server_dialog_title">Обновить DNS-сервер</string>
     <string name="update_list_name">Обновление названия списка</string>
+    <string name="use_method">Использовать метод</string>
     <string name="user_email_hint">Ваша электронная почта (необязательно)</string>
     <string name="user_message_hint">Чтобы мы могли быстрее решить проблему, напишите нам на английском или шведском и укажите, из какой страны вы подключаетесь.</string>
     <string name="username">Имя пользователя</string>
+    <string name="verifying_api_method">Проверяем метод доступа к API...</string>
     <string name="verifying_voucher">Идет проверка ваучера…</string>
     <string name="view_logs">Открыть журналы</string>
     <string name="virtual_adapter_problem">Ошибка виртуального адаптера</string>
