--- a/android/lib/resource/src/main/res/values-zh-rCN/strings.xml
+++ b/android/lib/resource/src/main/res/values-zh-rCN/strings.xml
@@ -17,6 +17,7 @@
     <string name="add_method">添加方法</string>
     <string name="add_time_to_account">在我们的网站上购买额度或兑换优惠券。</string>
     <string name="added_to_your_account">%1$s已添加到您的帐户中。</string>
+    <string name="adding_method">正在添加方法…</string>
     <string name="agree_and_continue">同意并继续</string>
     <string name="all_applications">所有应用程序</string>
     <string name="all_locations">所有位置</string>
@@ -27,12 +28,16 @@
     <string name="any">任何</string>
     <string name="api_access_description">管理和添加访问 Mulvad API 的自定义方法。</string>
     <string name="api_access_method_info_first_line">该应用需要与 Mulvad API 服务器通信，以便您登录、获取服务器列表和执行其他关键操作。</string>
+    <string name="api_access_method_info_fourth_line">“当前”方法表示应用用来访问 API 的方法。</string>
     <string name="api_access_method_info_second_line">在某些使用各类审查的网络上，可能无法直接访问 API 服务器。</string>
     <string name="api_access_method_info_third_line">此功能允许您通过代理和类似方法添加访问 API 的自定义方式，从而规避审查。</string>
     <string name="api_reachable">可通过 API 访问</string>
+    <string name="api_reachable_adding_method">可通过 API 访问，正在添加方法…</string>
     <string name="api_unreachable">无法通过 API 访问</string>
+    <string name="api_unreachable_save_anyway">无法通过 API 访问，是否仍然保存方法？</string>
     <string name="app_version">应用版本</string>
     <string name="apply">应用</string>
+    <string name="at_least_on_method_needs_to_enabled">至少需要启用一个方法</string>
     <string name="auth_failed">无法验证帐户。请发送问题报告。</string>
     <string name="authentication">身份验证</string>
     <string name="auto_connect">自动连接</string>
@@ -42,7 +47,11 @@
     <string name="auto_connect_carousel_first_slide_top_text">自动连接和锁定模式设置可以在 Android 系统设置中找到，请按照本指南启用其中一项或两项。</string>
     <string name="auto_connect_carousel_second_slide_bottom_text">2. 要启用自动连接，请点击&lt;b&gt;始终开启的 VPN&lt;/b&gt; 旁边的开关。</string>
     <string name="auto_connect_carousel_second_slide_top_text">自动连接在 Android 系统设置中称为“始终开启的 VPN”，此功能可确保您始终连接到 VPN 隧道并在重新启动后自动连接。</string>
+    <string name="auto_connect_carousel_third_slide_bottom_text">3. 要启用锁定模式，请点击&lt;b&gt;屏蔽未使用 VPN 的所有连接&lt;/b&gt;旁边的开关。&lt;br /&gt;&lt;br /&gt;&lt;b&gt;警告：此设置会阻止拆分应用和“本地网络共享”功能&lt;/b&gt;。</string>
+    <string name="auto_connect_carousel_third_slide_top_text">在 Android 系统设置中，锁定模式被称为&lt;b&gt;屏蔽未使用 VPN 的所有连接&lt;/b&gt;。它有助于尽可能减少泄露，但是也有一些已知的限制，要了解详情，请点击</string>
+    <string name="auto_connect_carousel_third_slide_top_text_website_link">此处</string>
     <string name="auto_connect_footer_legacy">请按照上述&lt;b&gt;%1$s&lt;/b&gt;中的指南操作，改用&lt;b&gt;始终开启&lt;/b&gt;系统设置。</string>
+    <string name="auto_connect_footer_legacy_tv">在应用启动时自动连接。在以后的更新中，此设置将被替换为新的“设备启动时连接”功能。</string>
     <string name="auto_connect_legacy">自动连接（旧）</string>
     <string name="automatic">自动</string>
     <string name="back">返回</string>
@@ -79,6 +88,7 @@
     <string name="creating_new_account">正在创建帐户…</string>
     <string name="creating_secure_connection">正在创建安全连接</string>
     <string name="critical_error">严重错误（需要注意）</string>
+    <string name="current_method">当前：%1$s</string>
     <string name="custom_dns_disable_mode_subtitle">禁用上方的所有 &lt;b&gt;%1$s&lt;/b&gt;以激活此设置。</string>
     <string name="custom_dns_footer">启用以添加至少一个 DNS 服务器。</string>
     <string name="custom_dns_hint">输入 IP</string>
@@ -94,6 +104,8 @@
     <string name="delete_custom_list_confirmation_description">删除“%1$s”？</string>
     <string name="delete_custom_list_message">“%1$s”已被删除</string>
     <string name="delete_list">删除列表</string>
+    <string name="delete_method">删除方法</string>
+    <string name="delete_method_question">是否删除方法？</string>
     <string name="device_inactive_description">您已移除此设备。要重新连接，您需要重新登录。</string>
     <string name="device_inactive_title">设备处于非活动状态</string>
     <string name="device_inactive_unblock_warning">前往登录将在此设备上解除阻止互联网。</string>
@@ -122,6 +134,7 @@
     <string name="edit_name">编辑名称</string>
     <string name="enable">启用</string>
     <string name="enable_custom_dns">使用自定义 DNS 服务器</string>
+    <string name="enable_method">启用方法</string>
     <string name="enter_value_placeholder">输入 MTU</string>
     <string name="enter_voucher_code">输入优惠码</string>
     <string name="error_occurred">出错了。</string>
@@ -133,6 +146,8 @@
     <string name="failed_to_remove_device">无法移除设备</string>
     <string name="failed_to_send">无法发送</string>
     <string name="failed_to_send_details">如果您退出窗体并稍后再试，您输入的信息仍会在这里。</string>
+    <string name="failed_to_set_current_test_error">无法设置为当前方法 – 无法通过 API 访问</string>
+    <string name="failed_to_set_current_unknown_error">无法设置为当前方法 – 未知原因</string>
     <string name="faqs_and_guides">常见问题解答与指南</string>
     <string name="filter">筛选</string>
     <string name="filtered">已筛选：</string>
@@ -209,6 +224,7 @@
     <string name="ownership">所有权</string>
     <string name="paid_until">到期时间</string>
     <string name="password">密码</string>
+    <string name="password_optional">密码（可选）</string>
     <string name="patch_not_matching_specification">补丁与规范不匹配</string>
     <string name="pay_to_start_using">要开始使用本应用，您首先需要向帐户中充入时间。</string>
     <string name="payment_billing_error_dialog_message">我们无法启动付款流程，请确保拥有最新版本的 Google Play。</string>
@@ -220,6 +236,8 @@
     <string name="payment_pending_dialog_message">我们目前正在验证您的购买，这可能需要一些时间。如果验证成功，您的时间将增加。</string>
     <string name="payment_pending_dialog_title">正在验证购买</string>
     <string name="payment_status_pending">Google Play 付款待处理</string>
+    <string name="please_enter_a_valid_ip_address">请输入有效的 IPv4 或 IPv6 地址</string>
+    <string name="please_enter_a_valid_remote_server_port">请输入有效的远程服务器端口</string>
     <string name="port">端口</string>
     <string name="privacy_disclaimer_body_first_paragraph">为确保您使用的是最安全的版本并通知您当前运行的版本存在的任何问题，应用会自动执行版本检查。此操作会将应用版本和 Android 系统版本发送到 Mullvad 服务器。Mullvad 会统计使用的应用版本和 Android 版本。数据永远不会通过任何可以识别您身份的方式存储或使用。</string>
     <string name="privacy_disclaimer_body_second_paragraph">如果使用拆分隧道功能，应用会向您的系统查询所有已安装应用程序的列表。此列表仅在拆分隧道视图中检索。有关已安装应用程序的信息永远不会离开设备。</string>
@@ -292,7 +310,11 @@
     <string name="submit_button">提交</string>
     <string name="switch_location">切换位置</string>
     <string name="tcp">TCP</string>
+    <string name="test_method">测试方法</string>
     <string name="testing">正在测试…</string>
+    <string name="testing_name">正在测试 %1$s…</string>
+    <string name="this_field_is_required">此字段为必填项</string>
+    <string name="this_is_already_set_as_current">它已被设置为当前方法</string>
     <string name="to_add_locations_to_a_list">要将位置添加到列表中，请按“︙”或长按国家/地区、城市或服务器。</string>
     <string name="to_create_a_custom_list">要创建自定义列表，请按“︙”</string>
     <string name="toggle_vpn">切换 VPN</string>
@@ -307,6 +329,7 @@
     <string name="undo">撤消</string>
     <string name="unsecured">未受保护</string>
     <string name="unsecured_connection">未受保护的连接</string>
+    <string name="unsecured_vpn_permission_error">不安全（无 VPN 权限）</string>
     <string name="unsupported_version">不受支持的版本</string>
     <string name="unsupported_version_description">此应用版本不受支持，因此您的隐私可能存在风险。请立即更新。</string>
     <string name="unsupported_version_without_upgrade">您正在运行不受支持的应用版本。</string>
@@ -315,9 +338,11 @@
     <string name="update_available_footer">有可用更新，请下载以保持安全。</string>
     <string name="update_dns_server_dialog_title">更新 DNS 服务器</string>
     <string name="update_list_name">更新列表名称</string>
+    <string name="use_method">使用方法</string>
     <string name="user_email_hint">您的电子邮件（可选）</string>
     <string name="user_message_hint">为了更好地帮助您，请用英语或瑞典语书写，并包含您连接时所在的国家/地区。</string>
     <string name="username">用户名</string>
+    <string name="verifying_api_method">正在验证 API 方法…</string>
     <string name="verifying_voucher">正在验证优惠券…</string>
     <string name="view_logs">查看应用日志</string>
     <string name="virtual_adapter_problem">虚拟适配器错误</string>
